--- a/directbak.yaml
+++ b/directbak.yaml
@@ -6860,7 +6860,6 @@ payload:
   - '+.91php.com'
   - '+.91pic.org'
   - '+.91pkpk.com'
-  - '+.91px.com'
   - '+.91qzc.com'
   - '+.91ri.org'
   - '+.91ronghui.com'
@@ -7120,7 +7119,6 @@ payload:
   - '+.95epay.com'
   - '+.95fenapp.com'
   - '+.95gq.com'
-  - '+.95idc.com'
   - '+.95jr.com'
   - '+.95k.com'
   - '+.95links.com'
@@ -8312,6 +8310,7 @@ payload:
   - '+.aiquanjian.com'
   - '+.aiqucn.com'
   - '+.aiqumi.com'
+  - '+.aiqygogo.com'
   - '+.aiqzu.net'
   - '+.air-level.com'
   - '+.air-matters.com'
@@ -12490,7 +12489,6 @@ payload:
   - '+.bwptl.com'
   - '+.bwpx.com'
   - '+.bwsoft.net'
-  - '+.bwv8.com'
   - '+.bwxsj.com'
   - '+.bx1k.com'
   - '+.bx24k.com'
@@ -15230,7 +15228,6 @@ payload:
   - '+.chuangread.com'
   - '+.chuangshifurui.com'
   - '+.chuangshileather.com'
-  - '+.chuangshizhenghe.com'
   - '+.chuangtoo.com'
   - '+.chuangx.org'
   - '+.chuangxin.com'
@@ -18269,7 +18266,6 @@ payload:
   - '+.dayin.la'
   - '+.dayinhu.com'
   - '+.dayinjiqudong.com'
-  - '+.dayinjizhijia.com'
   - '+.dayinpai.com'
   - '+.dayinpiano.com'
   - '+.dayitong.net'
@@ -19191,6 +19187,7 @@ payload:
   - '+.dizhi.xin'
   - '+.dizzylab.net'
   - '+.dj.net'
+  - '+.dj.tc'
   - '+.dj10.com'
   - '+.dj134.com'
   - '+.dj175.com'
@@ -20843,7 +20840,6 @@ payload:
   - '+.edifier.com'
   - '+.edingzhuan.com'
   - '+.edinuan.com'
-  - '+.edirect.asia'
   - '+.ediuschina.com'
   - '+.edk24.com'
   - '+.edmcn.net'
@@ -25570,6 +25566,7 @@ payload:
   - '+.gxehiil.bar'
   - '+.gxeqx.com'
   - '+.gxfdcw.com'
+  - '+.gxfeifan123.com'
   - '+.gxfin.com'
   - '+.gxfxwh.com'
   - '+.gxganju.com'
@@ -26504,7 +26501,6 @@ payload:
   - '+.haoyunbb.com'
   - '+.haoyunma.com'
   - '+.haoyunmom.com'
-  - '+.haoyy168.com'
   - '+.haozai120.com'
   - '+.haozaishop.com'
   - '+.haozhai.com'
@@ -33968,7 +33964,6 @@ payload:
   - '+.jxxhsd.com'
   - '+.jxxyqm.com'
   - '+.jxyrzdh.com'
-  - '+.jxysg.net'
   - '+.jxysyz.com'
   - '+.jxyworld.com'
   - '+.jxzyx.com'
@@ -37842,7 +37837,6 @@ payload:
   - '+.lubotv.com'
   - '+.luchinfo2.com'
   - '+.luciaz.me'
-  - '+.luck4ever.net'
   - '+.luckeeinc.com'
   - '+.luckfriend.com'
   - '+.luckincoffee.co'
@@ -38585,7 +38579,6 @@ payload:
   - '+.manew.com'
   - '+.manewvr.com'
   - '+.manfen.net'
-  - '+.manfen5.com'
   - '+.mangafuna.xyz'
   - '+.mangafunc.fun'
   - '+.mangake.com'
@@ -38866,6 +38859,7 @@ payload:
   - '+.mbcloud.com'
   - '+.mbgo.com'
   - '+.mbinary.xyz'
+  - '+.mbldbb.com'
   - '+.mbokee.com'
   - '+.mbsky.com'
   - '+.mbtsg.com'
@@ -40512,7 +40506,6 @@ payload:
   - '+.mtyee.com'
   - '+.mtyun.com'
   - '+.mtzbs.com'
-  - '+.mtzc100.com'
   - '+.mtzcjy.com'
   - '+.mtzmyjf.com'
   - '+.mtzuichen.com'
@@ -41090,7 +41083,6 @@ payload:
   - '+.narkii.com'
   - '+.narrowad.com'
   - '+.naruto.red'
-  - '+.naruto4u.com'
   - '+.narutom.com'
   - '+.nas66.com'
   - '+.nasgetinfo.com'
@@ -41252,6 +41244,7 @@ payload:
   - '+.neimengguyongli.com'
   - '+.neitui.com'
   - '+.neituixiaowangzi.com'
+  - '+.neko.pub'
   - '+.nelkshuhe.com'
   - '+.nellit.net'
   - '+.nengapp.com'
@@ -41404,7 +41397,6 @@ payload:
   - '+.newoo.com'
   - '+.neworiental.org'
   - '+.nework360.com'
-  - '+.neworld.org'
   - '+.neworldedu.org'
   - '+.neworldjp.com'
   - '+.newperiod.net'
@@ -41549,6 +41541,7 @@ payload:
   - '+.nicky1605.com'
   - '+.nicolaszhao.com'
   - '+.niconiconi.cc'
+  - '+.nicotine.vip'
   - '+.nidong.com'
   - '+.nie.io'
   - '+.nielsenccdata.tv'
@@ -42934,7 +42927,6 @@ payload:
   - '+.p2ptouhang.com'
   - '+.p2pxing.com'
   - '+.p2pxsj.com'
-  - '+.p31.net'
   - '+.p3k3.com'
   - '+.p491gt.com'
   - '+.p4pp.com'
@@ -43035,6 +43027,7 @@ payload:
   - '+.pandoxie.com'
   - '+.panduoduo.net'
   - '+.panduoduo.online'
+  - '+.panewslab.com'
   - '+.panfn.com'
   - '+.pangbu.com'
   - '+.pangcheng.com'
@@ -44254,7 +44247,6 @@ payload:
   - '+.psyzg.com'
   - '+.pszx.com'
   - '+.pszxw.com'
-  - '+.pszyzxh.org'
   - '+.pt-bus.com'
   - '+.pt-link.com'
   - '+.pt80.com'
@@ -46719,7 +46711,6 @@ payload:
   - '+.rosecmsc.com'
   - '+.rosedata.com'
   - '+.rosefinchfund.com'
-  - '+.rosi.me'
   - '+.rosinson.com'
   - '+.rossoarts.com'
   - '+.rossoarts.net'
@@ -46886,6 +46877,7 @@ payload:
   - '+.ruideppt.net'
   - '+.ruidongcloud.com'
   - '+.ruidroid.xyz'
+  - '+.ruifang-tech.com'
   - '+.ruiguandental.com'
   - '+.ruiguanrobot.com'
   - '+.ruihaimeifeng.com'
@@ -48831,7 +48823,6 @@ payload:
   - '+.shuai.win'
   - '+.shuaibo.wang'
   - '+.shuaigay.com'
-  - '+.shuaigay.nl'
   - '+.shuaigay6.com'
   - '+.shuaigeshe.com'
   - '+.shuaihuajun.com'
@@ -51143,7 +51134,6 @@ payload:
   - '+.sycxzx.net'
   - '+.sydaxxw.com'
   - '+.sydcch.com'
-  - '+.sydi.org'
   - '+.sydimg.com'
   - '+.sydjwl.com'
   - '+.sydw8.com'
@@ -53534,7 +53524,6 @@ payload:
   - '+.ttsq6.net'
   - '+.ttstream.com'
   - '+.ttsz8.com'
-  - '+.ttt.sh'
   - '+.ttthing.com'
   - '+.tttuangou.net'
   - '+.tttxf.com'
@@ -53787,7 +53776,6 @@ payload:
   - '+.tushu007.com'
   - '+.tushuguan.cc'
   - '+.tushumi.com'
-  - '+.tushupan.com'
   - '+.tushupdf.com'
   - '+.tusij.com'
   - '+.tusiot.com'
@@ -54072,7 +54060,6 @@ payload:
   - '+.u-om.com'
   - '+.u-qun.com'
   - '+.u-road.com'
-  - '+.u-tide.com'
   - '+.u005.com'
   - '+.u062.com'
   - '+.u14.com'
@@ -54107,7 +54094,6 @@ payload:
   - '+.u9u9.com'
   - '+.ua168.com'
   - '+.uadrc.com'
-  - '+.uaedata.com'
   - '+.uao-online.com'
   - '+.uao.so'
   - '+.uauc.net'
@@ -54673,7 +54659,6 @@ payload:
   - '+.uu1.com'
   - '+.uu1314.com'
   - '+.uu178.com'
-  - '+.uu361cn.com'
   - '+.uu38.com'
   - '+.uu41.com'
   - '+.uu456.com'
@@ -56414,7 +56399,6 @@ payload:
   - '+.weixinmenu.com'
   - '+.weixinmuban.com'
   - '+.weixinmvp.com'
-  - '+.weixinnu.com'
   - '+.weixinpy.com'
   - '+.weixinqing.com'
   - '+.weixinqn.com'
@@ -59207,6 +59191,7 @@ payload:
   - '+.xiaotee.com'
   - '+.xiaoten.com'
   - '+.xiaotengyouxi.com'
+  - '+.xiaotiancai.com'
   - '+.xiaotut.com'
   - '+.xiaotuzhan.com'
   - '+.xiaou2014.com'
@@ -59394,7 +59379,6 @@ payload:
   - '+.xifengjiuzhaoshang.com'
   - '+.xifengwangzhan.com'
   - '+.xifuquan.com'
-  - '+.xifuwa.com'
   - '+.xigeweb.com'
   - '+.xigo.tv'
   - '+.xigua110.com'
@@ -60338,7 +60322,6 @@ payload:
   - '+.xsjtxt.com'
   - '+.xsjwyx.com'
   - '+.xskhome.com'
-  - '+.xskyx.net'
   - '+.xslb.me'
   - '+.xsldh.net'
   - '+.xslou.com'
@@ -61700,7 +61683,6 @@ payload:
   - '+.yigaosu.com'
   - '+.yige.org'
   - '+.yigecun.com'
-  - '+.yigeking.com'
   - '+.yigeqianbao.com'
   - '+.yigerlife.com'
   - '+.yigood.net'
@@ -65465,7 +65447,6 @@ payload:
   - '+.zhzyw.com'
   - '+.zhzyw.org'
   - '+.zhzzx.com'
-  - '+.zi-han.net'
   - '+.zi.com'
   - '+.ziben365.com'
   - '+.ziboga.com'
