--- a/directbak.yaml
+++ b/directbak.yaml
@@ -693,6 +693,7 @@ payload:
   - '+.0fw.net'
   - '+.0g1s.com'
   - '+.0gouche.com'
+  - '+.0hgame.com'
   - '+.0ju.cc'
   - '+.0kee.com'
   - '+.0rg.pw'
@@ -1752,6 +1753,7 @@ payload:
   - '+.1866.tv'
   - '+.18665348887.com'
   - '+.186688.com'
+  - '+.1873game.com'
   - '+.187801.com'
   - '+.188.com'
   - '+.188158.com'
@@ -2596,7 +2598,6 @@ payload:
   - '+.2or3m.com'
   - '+.2p.com'
   - '+.2pcdn.com'
-  - '+.2pmob.com'
   - '+.2q10.com'
   - '+.2q1q.com'
   - '+.2qbb.com'
@@ -4722,7 +4723,6 @@ payload:
   - '+.52tiny.com'
   - '+.52toys.com'
   - '+.52tps.com'
-  - '+.52tq.net'
   - '+.52tql.com'
   - '+.52tt.com'
   - '+.52udl.com'
@@ -5324,6 +5324,7 @@ payload:
   - '+.5uu.us'
   - '+.5uu6.com'
   - '+.5uu8.com'
+  - '+.5v13.com'
   - '+.5v55.com'
   - '+.5w.com'
   - '+.5w123.com'
@@ -6534,7 +6535,6 @@ payload:
   - '+.88bx.com'
   - '+.88cdn.com'
   - '+.88dj.com'
-  - '+.88duomi.com'
   - '+.88dushu.com'
   - '+.88eq.com'
   - '+.88fenxiao.com'
@@ -8126,6 +8126,7 @@ payload:
   - '+.aicdn5.com'
   - '+.aichaicp.com'
   - '+.aichaoxing.com'
+  - '+.aichat.net'
   - '+.aichawu.com'
   - '+.aicheren.com'
   - '+.aichunjing.com'
@@ -9322,6 +9323,7 @@ payload:
   - '+.appleadstech.com'
   - '+.applebl.com'
   - '+.applehunt.com'
+  - '+.applemei.com'
   - '+.appletuan.com'
   - '+.applex.net'
   - '+.applicationloader.net'
@@ -11200,6 +11202,7 @@ payload:
   - '+.bili.com'
   - '+.biliapi.com'
   - '+.biliapi.net'
+  - '+.biliaudiocdn.xyz'
   - '+.bilibii.com'
   - '+.bilibili.cc'
   - '+.bilibili.co'
@@ -11685,6 +11688,7 @@ payload:
   - '+.bjsqgy.com'
   - '+.bjsryc.com'
   - '+.bjssedu.com'
+  - '+.bjsskdn.com'
   - '+.bjsspm.com'
   - '+.bjsubway.cc'
   - '+.bjsubway.com'
@@ -11782,7 +11786,6 @@ payload:
   - '+.bkxs.net'
   - '+.bkzzy.com'
   - '+.bl.com'
-  - '+.bl35.org'
   - '+.bl9k.com'
   - '+.bla01.com'
   - '+.black-unique.com'
@@ -13914,6 +13917,7 @@ payload:
   - '+.chaishiguan.com'
   - '+.chaitin.com'
   - '+.chajian110.com'
+  - '+.chajiandaquan.com'
   - '+.chajianmi.com'
   - '+.chajiaotong.com'
   - '+.chajie.com'
@@ -14165,7 +14169,6 @@ payload:
   - '+.chen7782.com'
   - '+.chenag.com'
   - '+.chenall.net'
-  - '+.chenanz.com'
   - '+.chenapp.com'
   - '+.chende.net'
   - '+.cheng-nuo.com'
@@ -16129,7 +16132,6 @@ payload:
   - '+.cnhvacrnet.com'
   - '+.cnhwjt.com'
   - '+.cnhzz.com'
-  - '+.cniaas.com'
   - '+.cniao5.com'
   - '+.cniao8.com'
   - '+.cnibx.com'
@@ -16689,7 +16691,6 @@ payload:
   - '+.conoha.vip'
   - '+.conohavps.com'
   - '+.conpak.com.hk'
-  - '+.conpersh.com'
   - '+.conshow.com'
   - '+.console-integration.cdnetworks.com'
   - '+.console.cdnetworks.com'
@@ -16734,6 +16735,7 @@ payload:
   - '+.cooldu.com'
   - '+.cooleasy.net'
   - '+.coolecho.net'
+  - '+.coolexe.com'
   - '+.coolfd.com'
   - '+.coolgamebox.com'
   - '+.coolgua.net'
@@ -17191,7 +17193,6 @@ payload:
   - '+.csdyx.com'
   - '+.csea767.com'
   - '+.csebank.com'
-  - '+.csehms.com'
   - '+.csflgg.com'
   - '+.csftyy.com'
   - '+.csgm168.com'
@@ -22954,6 +22955,7 @@ payload:
   - '+.fm520.com'
   - '+.fm918.net'
   - '+.fm960.net'
+  - '+.fmapp.com'
   - '+.fmbimg.com'
   - '+.fmcoprc.gov.mo'
   - '+.fmeibao.com'
@@ -23380,7 +23382,6 @@ payload:
   - '+.funjsq.com'
   - '+.funletu.com'
   - '+.funliving.com'
-  - '+.funmovie.cc'
   - '+.funnulldns.com'
   - '+.funnycore.com'
   - '+.funnypicsbox.com'
@@ -23560,7 +23561,6 @@ payload:
   - '+.fz222.com'
   - '+.fz2sc.com'
   - '+.fz597.com'
-  - '+.fzbtv.com'
   - '+.fzccpit.org'
   - '+.fzchpos.com'
   - '+.fzcyjh.com'
@@ -24578,7 +24578,6 @@ payload:
   - '+.gltop.com'
   - '+.glvs.com'
   - '+.glxlawyer.com'
-  - '+.glzhuang.com'
   - '+.glzip.com'
   - '+.glzj88.com'
   - '+.glzy8.com'
@@ -25100,6 +25099,7 @@ payload:
   - '+.gsdpw.com'
   - '+.gsflcp.com'
   - '+.gsgs10086.com'
+  - '+.gsgundam.com'
   - '+.gshhqy.com'
   - '+.gsi24.com'
   - '+.gsicpa.net'
@@ -25276,7 +25276,6 @@ payload:
   - '+.guanshangyu.cc'
   - '+.guanshi.net'
   - '+.guanshuzw.com'
-  - '+.guantaicn.com'
   - '+.guanting.com'
   - '+.guanvip8.com'
   - '+.guanwang.com'
@@ -25465,7 +25464,6 @@ payload:
   - '+.guozh.net'
   - '+.guozhihua.net'
   - '+.guozhivip.com'
-  - '+.guozhiyouq.com'
   - '+.guozhongxin.com'
   - '+.guozi.org'
   - '+.guoziyx.com'
@@ -25578,7 +25576,6 @@ payload:
   - '+.gxjgdj.com'
   - '+.gxjtaq.com'
   - '+.gxjznet.com'
-  - '+.gxkjbg.com'
   - '+.gxkjdns.com'
   - '+.gxkjec.com'
   - '+.gxkjjt.com'
@@ -26303,7 +26300,6 @@ payload:
   - '+.haodaibao.com'
   - '+.haodanku.com'
   - '+.haodaquan.com'
-  - '+.haodeplus.com'
   - '+.haodevps.com'
   - '+.haodewap.com'
   - '+.haodf.com'
@@ -27109,6 +27105,7 @@ payload:
   - '+.helloweba.net'
   - '+.hellowebfont.com'
   - '+.hellowgame.com'
+  - '+.helloworld.net'
   - '+.helloyao.com'
   - '+.helong.info'
   - '+.help-hope.org'
@@ -28166,6 +28163,7 @@ payload:
   - '+.hoxing.com'
   - '+.hoxue.com'
   - '+.hoyakeji.com'
+  - '+.hoyoverse.com'
   - '+.hozin.com'
   - '+.hp-marathon.com'
   - '+.hp123.com'
@@ -29330,7 +29328,6 @@ payload:
   - '+.hyundaibeijing.com'
   - '+.hyuuhit.com'
   - '+.hywly.com'
-  - '+.hyx1314.xyz'
   - '+.hyxrzs.com'
   - '+.hyyf.net'
   - '+.hyyoa.com'
@@ -29757,7 +29754,6 @@ payload:
   - '+.ichinaceo.com'
   - '+.ichinaenergy.com'
   - '+.ichishu.com'
-  - '+.ichong123.com'
   - '+.ichuanglan.com'
   - '+.ichuangwei.com'
   - '+.ichuangye.com'
@@ -30002,7 +29998,6 @@ payload:
   - '+.idzcp.com'
   - '+.idzoom.com'
   - '+.ie027.com'
-  - '+.ie3.cc'
   - '+.ie515.com'
   - '+.ie525.com'
   - '+.ie815.com'
@@ -30267,7 +30262,6 @@ payload:
   - '+.iifab.com'
   - '+.iigs9.com'
   - '+.iii80.com'
-  - '+.iiiff.com'
   - '+.iiiimg.com'
   - '+.iiijk.com'
   - '+.iiilab.com'
@@ -30726,6 +30720,7 @@ payload:
   - '+.ininin.com'
   - '+.initialview.com'
   - '+.initnil.com'
+  - '+.initroot.com'
   - '+.inja.com'
   - '+.inkankan.com'
   - '+.inkanke.com'
@@ -31129,6 +31124,7 @@ payload:
   - '+.isoo.cc'
   - '+.isorange.com'
   - '+.isoshu.com'
+  - '+.isotoo.com'
   - '+.isoucai.com'
   - '+.isoyes.com'
   - '+.isoying.com'
@@ -31143,6 +31139,7 @@ payload:
   - '+.isscloud.com'
   - '+.issconline.com'
   - '+.issedu365.com'
+  - '+.issjj.com'
   - '+.isthnew.com'
   - '+.istpei.com'
   - '+.istrongcloud.com'
@@ -32219,7 +32216,6 @@ payload:
   - '+.jianxin-tech.com'
   - '+.jianxinyun.com'
   - '+.jianxun.io'
-  - '+.jianyi.net'
   - '+.jianyu360.com'
   - '+.jianyuebg.com'
   - '+.jianyujiasu.com'
@@ -34687,6 +34683,7 @@ payload:
   - '+.kikicici.com'
   - '+.kikitamap.com'
   - '+.kikoplay.fun'
+  - '+.kiku.vip'
   - '+.kikyoar.com'
   - '+.kililife.com'
   - '+.killdb.com'
@@ -35466,6 +35463,7 @@ payload:
   - '+.kuwan8.com'
   - '+.kuwanapp.com'
   - '+.kuwanbang.com'
+  - '+.kuweimi.com'
   - '+.kuwen.net'
   - '+.kuwew.com'
   - '+.kuwuu.com'
@@ -35532,6 +35530,7 @@ payload:
   - '+.kxjlt.org'
   - '+.kxnboat.com'
   - '+.kxpay.net'
+  - '+.kxscience.com'
   - '+.kxt.com'
   - '+.kxting.com'
   - '+.kxtoo.com'
@@ -38581,6 +38580,7 @@ payload:
   - '+.mangguo.com'
   - '+.mangguo.org'
   - '+.mangguo168.com'
+  - '+.mangguonews.com'
   - '+.mangocity.com'
   - '+.mangoebike.com'
   - '+.mangogame.com'
@@ -41456,7 +41456,6 @@ payload:
   - '+.nfmrtfv.com'
   - '+.nfpeople.com'
   - '+.nfs-china.com'
-  - '+.nfs-wuxi.com'
   - '+.nfschina.com'
   - '+.nfwin.com'
   - '+.nfyk.com'
@@ -41776,7 +41775,6 @@ payload:
   - '+.nmzh.net'
   - '+.nmzol.com'
   - '+.nmzzlhwlkj.com'
-  - '+.nn.ci'
   - '+.nn.com'
   - '+.nn12333.com'
   - '+.nn92.com'
@@ -42307,6 +42305,7 @@ payload:
   - '+.oilchem.net'
   - '+.oilepay.com'
   - '+.oilhr.com'
+  - '+.oinva5yl.com'
   - '+.oiuwe.com'
   - '+.oj03.com'
   - '+.ok-meeting.com'
@@ -44561,6 +44560,7 @@ payload:
   - '+.qdcz.com'
   - '+.qddown.com'
   - '+.qdfuns.com'
+  - '+.qdgaoshanyun.com'
   - '+.qdgege.com'
   - '+.qdgw.com'
   - '+.qdgxqrc.com'
@@ -45082,7 +45082,6 @@ payload:
   - '+.qingsong123.com'
   - '+.qingsongchou.com'
   - '+.qingstor.com'
-  - '+.qingsuancn.com'
   - '+.qingsucai.com'
   - '+.qingsword.com'
   - '+.qingtaoke.com'
@@ -46797,7 +46796,6 @@ payload:
   - '+.rsk26.com'
   - '+.rsng.net'
   - '+.rso.wang'
-  - '+.rsp.ink'
   - '+.rss.ink'
   - '+.rsscc.com'
   - '+.rssmeet.com'
@@ -48379,6 +48377,7 @@ payload:
   - '+.shenzhekou.com'
   - '+.shenzhen-world.com'
   - '+.shenzhenair.com'
+  - '+.shenzhenjia.net'
   - '+.shenzhenmarathon.org'
   - '+.shenzhenshouxin.com'
   - '+.shenzhenshui.com'
@@ -49275,7 +49274,6 @@ payload:
   - '+.sinochemitc.com'
   - '+.sinocul.com'
   - '+.sinoec.net'
-  - '+.sinoef.com'
   - '+.sinoergy.com'
   - '+.sinoevin.com'
   - '+.sinofo.com'
@@ -50108,7 +50106,6 @@ payload:
   - '+.soundai.info'
   - '+.soupan.info'
   - '+.soupf.net'
-  - '+.soupian.org'
   - '+.soupingguo.com'
   - '+.soupis.com'
   - '+.soupu.com'
@@ -50349,6 +50346,7 @@ payload:
   - '+.sseinfo.com'
   - '+.ssf.cc'
   - '+.ssgabc.com'
+  - '+.ssgeek.com'
   - '+.ssggg.com'
   - '+.ssgushi.com'
   - '+.ssine.cc'
@@ -50835,6 +50833,7 @@ payload:
   - '+.suo.im'
   - '+.suo.nz'
   - '+.suobao8.com'
+  - '+.suobifa.com'
   - '+.suobuy.com'
   - '+.suofeiya.com'
   - '+.suofeiyashop.com'
@@ -51345,7 +51344,6 @@ payload:
   - '+.szjuquan.com'
   - '+.szjyt66.com'
   - '+.szjytx.com'
-  - '+.szkb.net'
   - '+.szkingdom.com'
   - '+.szkoa.com'
   - '+.szksqy.com'
@@ -51724,6 +51722,7 @@ payload:
   - '+.tanweime.com'
   - '+.tanwuapp.com'
   - '+.tanx.com'
+  - '+.tanxuling.com'
   - '+.tanyihui.com'
   - '+.tanyu.mobi'
   - '+.tanyuantech.com'
@@ -52281,7 +52280,6 @@ payload:
   - '+.tgshiguan.com'
   - '+.tgyoo.com'
   - '+.tgyun.cc'
-  - '+.th123.com'
   - '+.th38.com'
   - '+.thaiyuehealth.com'
   - '+.thamco.com'
@@ -55043,7 +55041,6 @@ payload:
   - '+.vicrab.com'
   - '+.vicsdf.com'
   - '+.vida-bio.com'
-  - '+.vidaa.com'
   - '+.vidarsoft.com'
   - '+.viday.org'
   - '+.videaba.com'
@@ -55383,7 +55380,6 @@ payload:
   - '+.vsdhf.com'
   - '+.vsens.com'
   - '+.vshangdaili.com'
-  - '+.vshare.com'
   - '+.vsharecloud.com'
   - '+.vsharing.com'
   - '+.vshengsu.com'
@@ -56151,7 +56147,6 @@ payload:
   - '+.wechat.com'
   - '+.wechat.org'
   - '+.wechat007.com'
-  - '+.wechat500.com'
   - '+.wechatapp.com'
   - '+.wechatify.net'
   - '+.wechatpay.com.hk'
@@ -56642,7 +56637,6 @@ payload:
   - '+.wey.com'
   - '+.weyee.com'
   - '+.weyhd.com'
-  - '+.weyi.cc'
   - '+.weyman.me'
   - '+.weyo.me'
   - '+.wezeit.com'
@@ -58531,7 +58525,6 @@ payload:
   - '+.xcpapa.xyz'
   - '+.xcrxykl.com'
   - '+.xcshaifen.com'
-  - '+.xcsinsignia.com'
   - '+.xcstuido.com'
   - '+.xcsyxx.net'
   - '+.xctmr.com'
@@ -59942,7 +59935,6 @@ payload:
   - '+.xjiuai.com'
   - '+.xjiyou.com'
   - '+.xjjnjp.org'
-  - '+.xjjxc.com'
   - '+.xjltp.com'
   - '+.xjlxw.com'
   - '+.xjlz365.com'
@@ -60679,7 +60671,6 @@ payload:
   - '+.xwzc.net'
   - '+.xwzxjy.com'
   - '+.xx007.com'
-  - '+.xx144.com'
   - '+.xx4a.com'
   - '+.xx5.com'
   - '+.xxadc.com'
@@ -61540,6 +61531,7 @@ payload:
   - '+.yhdm5.com'
   - '+.yhdns.net'
   - '+.yhdtns.com'
+  - '+.yhees.com'
   - '+.yhetent.com'
   - '+.yhfx.info'
   - '+.yhgo.wang'
@@ -62587,6 +62579,7 @@ payload:
   - '+.youhutong.com'
   - '+.youideal.net'
   - '+.youinsh.com'
+  - '+.youjb.com'
   - '+.youjiands.net'
   - '+.youjiangzhijia.com'
   - '+.youjiao.com'
@@ -66220,6 +66213,7 @@ payload:
   - '+.zto.com'
   - '+.zto.jp'
   - '+.zto56.com'
+  - '+.ztomember.com'
   - '+.ztpay.org'
   - '+.ztqqt.com'
   - '+.ztrhmall.com'
@@ -66635,7 +66629,6 @@ payload:
   - '+.zzgm.net'
   - '+.zzgryl.com'
   - '+.zzhaofang.com'
-  - '+.zzhaoz.com'
   - '+.zzhlzc.com'
   - '+.zzhybz.com'
   - '+.zzidc.com'
