--- a/directbak.yaml
+++ b/directbak.yaml
@@ -709,7 +709,6 @@ payload:
   - '+.0xsky.com'
   - '+.0xue.com'
   - '+.0y856.com'
-  - '+.1-111-1.com'
   - '+.1-123.com'
   - '+.1-b.tc'
   - '+.1-cs.net'
@@ -761,6 +760,7 @@ payload:
   - '+.10086.win'
   - '+.1008610086.com'
   - '+.10086web.com'
+  - '+.100883.com'
   - '+.100allin.com'
   - '+.100alpha.com'
   - '+.100ask.net'
@@ -1492,7 +1492,6 @@ payload:
   - '+.16wl.cc'
   - '+.16xcw.com'
   - '+.16xx8.com'
-  - '+.16xz.com'
   - '+.17.com'
   - '+.170.com'
   - '+.17025.org'
@@ -1947,7 +1946,6 @@ payload:
   - '+.1mod.org'
   - '+.1more.com'
   - '+.1mpi.com'
-  - '+.1mtime.com'
   - '+.1mushroom.com'
   - '+.1mxian.com'
   - '+.1n11.com'
@@ -3247,7 +3245,6 @@ payload:
   - '+.381pk.com'
   - '+.38238r.com'
   - '+.3829.com'
-  - '+.3837.cc'
   - '+.3839.com'
   - '+.3839app.com'
   - '+.3839app.net'
@@ -4055,7 +4052,6 @@ payload:
   - '+.51ggd.com'
   - '+.51ggwu.com'
   - '+.51gh.net'
-  - '+.51gif.com'
   - '+.51give.org'
   - '+.51gjie.com'
   - '+.51gjj.com'
@@ -5001,7 +4997,6 @@ payload:
   - '+.58abb.com'
   - '+.58bangmang.com'
   - '+.58baogao.com'
-  - '+.58bo.com'
   - '+.58buy.com'
   - '+.58che.com'
   - '+.58cloud.com'
@@ -6182,7 +6177,6 @@ payload:
   - '+.800lie.com'
   - '+.800lj.com'
   - '+.800mei.net'
-  - '+.800pai.com'
   - '+.800pharm.com'
   - '+.800t.net'
   - '+.800tu.com'
@@ -6269,7 +6263,6 @@ payload:
   - '+.81999.org'
   - '+.81book.com'
   - '+.81comdns.com'
-  - '+.81dk.com'
   - '+.81it.com'
   - '+.81js.net'
   - '+.81kx.com'
@@ -6510,7 +6503,6 @@ payload:
   - '+.88ht.com'
   - '+.88htu.com'
   - '+.88hu.com'
-  - '+.88jianshen.com'
   - '+.88koo.com'
   - '+.88lan.com'
   - '+.88lgo.com'
@@ -7004,7 +6996,6 @@ payload:
   - '+.945idc.com'
   - '+.945n48.com'
   - '+.9466.com'
-  - '+.946vr.com'
   - '+.94831.com'
   - '+.9495.com'
   - '+.949678.com'
@@ -7839,6 +7830,7 @@ payload:
   - '+.adt100.com'
   - '+.adtaipo.com'
   - '+.adtchrome.com'
+  - '+.adtianmai.com'
   - '+.adtime.com'
   - '+.adtiming.com'
   - '+.adtmm.com'
@@ -8438,7 +8430,6 @@ payload:
   - '+.ak0.tw'
   - '+.ak1ak1.com'
   - '+.ak47ids.com'
-  - '+.akaedu.org'
   - '+.akaifa.com'
   - '+.akaiwl.com'
   - '+.akandou.com'
@@ -9735,7 +9726,6 @@ payload:
   - '+.avatarmobi.com'
   - '+.avc-mr.com'
   - '+.avc-ott.com'
-  - '+.avc.com.tw'
   - '+.avdll.com'
   - '+.aves.art'
   - '+.avexchina.com'
@@ -9836,7 +9826,6 @@ payload:
   - '+.azchcdng.com'
   - '+.azchcdnj.com'
   - '+.azchcdnm.com'
-  - '+.azfashao.com'
   - '+.azg168.com'
   - '+.azhimalayanvh.com'
   - '+.azhituo.com'
@@ -10794,7 +10783,6 @@ payload:
   - '+.beiwo.tv'
   - '+.beiww.com'
   - '+.beixingmh.com'
-  - '+.beiyanmaoyi.com'
   - '+.beiying.online'
   - '+.beiyongzhan.com'
   - '+.beiyxiu.com'
@@ -11504,7 +11492,6 @@ payload:
   - '+.bjdt360.com'
   - '+.bjeasycom.com'
   - '+.bjepn.com'
-  - '+.bjertong999.com'
   - '+.bjewaytek.com'
   - '+.bjexmail.com'
   - '+.bjexx.com'
@@ -12281,7 +12268,6 @@ payload:
   - '+.btpig.com'
   - '+.btplay.net'
   - '+.btrcsc.com'
-  - '+.bts.hk'
   - '+.btsabc.org'
   - '+.btschool.net'
   - '+.btsemi.com'
@@ -12347,7 +12333,6 @@ payload:
   - '+.buimg.com'
   - '+.bujie.com'
   - '+.bukamanhua.com'
-  - '+.bukexue.com'
   - '+.bukeyi.net'
   - '+.bukop.com'
   - '+.bulaisi.com'
@@ -12593,7 +12578,6 @@ payload:
   - '+.bzonl.com'
   - '+.bzpc119.com'
   - '+.bzrb.net'
-  - '+.bzrnice.com'
   - '+.bzshw.com'
   - '+.bzsoso.com'
   - '+.bzw315.com'
@@ -12902,7 +12886,6 @@ payload:
   - '+.cansine.com'
   - '+.cansuan.com'
   - '+.cantoge.com'
-  - '+.canvasf.com'
   - '+.canway.net'
   - '+.canwayit.com'
   - '+.canwaysoft.com'
@@ -14398,7 +14381,6 @@ payload:
   - '+.china-zikao.com'
   - '+.china.com'
   - '+.china.mintel.com'
-  - '+.china.uxengine.net'
   - '+.china001.com'
   - '+.china12365.com'
   - '+.china17.net'
@@ -14536,7 +14518,6 @@ payload:
   - '+.chinadengshi.com'
   - '+.chinadentalshow.com'
   - '+.chinadep.com'
-  - '+.chinadiaoyou.com'
   - '+.chinadigit.org'
   - '+.chinadmoz.org'
   - '+.chinadns.org'
@@ -15637,6 +15618,7 @@ payload:
   - '+.cloudmap.hk'
   - '+.cloudmes.io'
   - '+.cloudminds.com'
+  - '+.cloudmob.vip'
   - '+.cloudmob.xyz'
   - '+.cloudnapps.com'
   - '+.cloudp.cc'
@@ -16967,7 +16949,6 @@ payload:
   - '+.cqxh120.com'
   - '+.cqxiehe.com'
   - '+.cqxingyun.com'
-  - '+.cqxxzwj.com'
   - '+.cqxyfl.com'
   - '+.cqyc.net'
   - '+.cqyestar.com'
@@ -17874,7 +17855,6 @@ payload:
   - '+.dajiazhongyi.com'
   - '+.dajie.com'
   - '+.dajieimg.com'
-  - '+.dajiezhu.com'
   - '+.dajixie.com'
   - '+.dajke.com'
   - '+.dajuntech.com'
@@ -20758,6 +20738,7 @@ payload:
   - '+.edifier.com'
   - '+.edingzhuan.com'
   - '+.edinuan.com'
+  - '+.editcode.net'
   - '+.ediuschina.com'
   - '+.edk24.com'
   - '+.edmcn.net'
@@ -21894,7 +21875,6 @@ payload:
   - '+.falomall.com'
   - '+.faloo.com'
   - '+.famanoder.com'
-  - '+.famecl.com'
   - '+.fameile.net'
   - '+.famen88.com'
   - '+.famens.com'
@@ -22050,7 +22030,6 @@ payload:
   - '+.fanshuapp.com'
   - '+.fanshui.net'
   - '+.fanshuxiaobao.com'
-  - '+.fanshuxiaozu.com'
   - '+.fansiji.com'
   - '+.fansimg.com'
   - '+.fansjoy.net'
@@ -22713,7 +22692,6 @@ payload:
   - '+.fjcesuo.com'
   - '+.fjcoop.com'
   - '+.fjcqjy.com'
-  - '+.fjcy10010.com'
   - '+.fjcyl.org'
   - '+.fjdaily.com'
   - '+.fjdh.com'
@@ -23404,7 +23382,6 @@ payload:
   - '+.fx120.net'
   - '+.fx168api.com'
   - '+.fx168vip.com'
-  - '+.fx273.com'
   - '+.fx3q.com'
   - '+.fx678.com'
   - '+.fx678.net'
@@ -24251,7 +24228,6 @@ payload:
   - '+.ggmzy1.com'
   - '+.ggo.la'
   - '+.ggo.net'
-  - '+.ggpeixun.com'
   - '+.ggqule.com'
   - '+.ggqx.com'
   - '+.ggsafe.com'
@@ -25949,7 +25925,6 @@ payload:
   - '+.hairunpictures.com'
   - '+.haisapan.com'
   - '+.haisenyouxi8.com'
-  - '+.haisheninfo.com'
   - '+.haisheteam.com'
   - '+.haishisheji.com'
   - '+.haishui.cc'
@@ -27540,7 +27515,6 @@ payload:
   - '+.hkgcr.com'
   - '+.hkhanji.com'
   - '+.hkjapp.com'
-  - '+.hkkaoyan.com'
   - '+.hkklock.com'
   - '+.hkkuaiyixiu.com'
   - '+.hklego.com'
@@ -29427,7 +29401,6 @@ payload:
   - '+.i5i6.net'
   - '+.i5mai.com'
   - '+.i6879.com'
-  - '+.i7aot4.com'
   - '+.i7box.com'
   - '+.i7fh.com'
   - '+.i7gg.com'
@@ -30014,7 +29987,6 @@ payload:
   - '+.iftell.com'
   - '+.ifttl.com'
   - '+.ifukua.com'
-  - '+.ifulelol.com'
   - '+.ifumanhua.net'
   - '+.ifundstore.com'
   - '+.ifunmac.com'
@@ -30737,7 +30709,6 @@ payload:
   - '+.ionewu.com'
   - '+.ionic.wang'
   - '+.ionichina.com'
-  - '+.ionicliquid.org'
   - '+.iooeoo.com'
   - '+.iopenhec.com'
   - '+.ioqq.com'
@@ -30825,7 +30796,6 @@ payload:
   - '+.ipgoal.com'
   - '+.iph123.com'
   - '+.iphonediule.com'
-  - '+.iphp8.com'
   - '+.ipin.com'
   - '+.ipinba.com'
   - '+.ipingyao.com'
@@ -31849,7 +31819,6 @@ payload:
   - '+.jfshare.com'
   - '+.jfstatic.com'
   - '+.jfuwu.com'
-  - '+.jfxqczl.com'
   - '+.jfydgame.com'
   - '+.jfyiyao.com'
   - '+.jfz.com'
@@ -32156,7 +32125,6 @@ payload:
   - '+.jiarenvip.com'
   - '+.jiarui.cc'
   - '+.jiasale.com'
-  - '+.jiasao.net'
   - '+.jiashuangkuaizi.com'
   - '+.jiashule.com'
   - '+.jiaston.com'
@@ -33443,7 +33411,6 @@ payload:
   - '+.jszbug.com'
   - '+.jszbw.com'
   - '+.jszg.org'
-  - '+.jszgjt.net'
   - '+.jszhaobiao.com'
   - '+.jszks.com'
   - '+.jszks.net'
@@ -33782,7 +33749,6 @@ payload:
   - '+.jxexpressway.com'
   - '+.jxf57.com'
   - '+.jxf75.com'
-  - '+.jxfcls.com'
   - '+.jxg1.com'
   - '+.jxgdw.com'
   - '+.jxggcm.com'
@@ -36061,6 +36027,7 @@ payload:
   - '+.lehaitv.com'
   - '+.lehe.com'
   - '+.lehecai.com'
+  - '+.lehesd.com'
   - '+.lehihi.com'
   - '+.leho.com'
   - '+.lehu.host'
@@ -36875,7 +36842,6 @@ payload:
   - '+.lipinduihuan.com'
   - '+.lippt.com'
   - '+.liqihuoke.com'
-  - '+.liqijt.com'
   - '+.liqile.com'
   - '+.liqinyi.com'
   - '+.liqu.com'
@@ -37351,7 +37317,6 @@ payload:
   - '+.longcai.com'
   - '+.longcheer.com'
   - '+.longchen80.com'
-  - '+.longchengtg.com'
   - '+.longcity.net'
   - '+.longclouds.com'
   - '+.longcore.com'
@@ -37995,7 +37960,6 @@ payload:
   - '+.lxiaoxin.com'
   - '+.lxin007.com'
   - '+.lxjep.com'
-  - '+.lxjk999.com'
   - '+.lxlggo.com'
   - '+.lxly168.com'
   - '+.lxs123.com'
@@ -38231,7 +38195,6 @@ payload:
   - '+.madisonboom.com'
   - '+.madku.com'
   - '+.madmalls.com'
-  - '+.madouer.com'
   - '+.madouka.com'
   - '+.madown.com'
   - '+.madserving.com'
@@ -39153,7 +39116,6 @@ payload:
   - '+.met.red'
   - '+.met169.com'
   - '+.metacd.com'
-  - '+.metajs.info'
   - '+.metal-min.com'
   - '+.metalchina.com'
   - '+.meten.com'
@@ -39718,7 +39680,6 @@ payload:
   - '+.mktcreator.com'
   - '+.mktdatatech.com'
   - '+.mktzr.com'
-  - '+.mkuai.net'
   - '+.mkvcn.com'
   - '+.mkwhat.com'
   - '+.mkzcdn.com'
@@ -40444,7 +40405,6 @@ payload:
   - '+.muyuanfoods.com'
   - '+.muzhi.us'
   - '+.muzhigame.com'
-  - '+.muzhiwan.com'
   - '+.muzi999.com'
   - '+.muzijie.com'
   - '+.muzili.xyz'
@@ -40856,7 +40816,6 @@ payload:
   - '+.naibago.com'
   - '+.naicha99.com'
   - '+.naichabiao.com'
-  - '+.naichagang.com'
   - '+.naifei.pro'
   - '+.naigirl.com'
   - '+.naikanxs.com'
@@ -41124,7 +41083,6 @@ payload:
   - '+.neolee.com'
   - '+.neolix.net'
   - '+.neoremind.com'
-  - '+.nepconchina.com'
   - '+.nepian.com'
   - '+.neptcn.com'
   - '+.ner98.com'
@@ -41552,7 +41510,6 @@ payload:
   - '+.njhengyou.com'
   - '+.njhgame.com'
   - '+.njhszoo.com'
-  - '+.njhwsk.com'
   - '+.njibhu.com'
   - '+.njjn.com'
   - '+.njjsyy.com'
@@ -41896,6 +41853,7 @@ payload:
   - '+.numseed.com'
   - '+.nunu8.com'
   - '+.nuobeiliao.com'
+  - '+.nuobg.com'
   - '+.nuodefund.com'
   - '+.nuoder.com'
   - '+.nuoha.vip'
@@ -42209,7 +42167,6 @@ payload:
   - '+.okhimalayanzi.com'
   - '+.okhqb.com'
   - '+.okidc.com'
-  - '+.okidc.net'
   - '+.okideaad.com'
   - '+.okii.com'
   - '+.okinfo.org'
@@ -43028,7 +42985,6 @@ payload:
   - '+.patent9.com'
   - '+.patexplorer.com'
   - '+.patheagames.com'
-  - '+.patindex.com'
   - '+.patmm.com'
   - '+.patsev.com'
   - '+.patsnapglobal.com'
@@ -43723,6 +43679,7 @@ payload:
   - '+.plob.org'
   - '+.plotcup.com'
   - '+.plqdf.com'
+  - '+.plsadx.com'
   - '+.plsmspx.com'
   - '+.plsub.com'
   - '+.pluosi.com'
@@ -44296,6 +44253,7 @@ payload:
   - '+.pznrfsy.com'
   - '+.pznsh.com'
   - '+.pzoom.com'
+  - '+.pzpu.com'
   - '+.pztuan.com'
   - '+.q-dazzle.com'
   - '+.q-supreme.com'
@@ -44850,7 +44808,6 @@ payload:
   - '+.qimser.com'
   - '+.qin.com'
   - '+.qin08.com'
-  - '+.qiname.net'
   - '+.qinbei.com'
   - '+.qinbing.com'
   - '+.qinbing114.com'
@@ -45050,7 +45007,6 @@ payload:
   - '+.qiumeiapp.com'
   - '+.qiumibao.com'
   - '+.qiumijia.com'
-  - '+.qiuquan.cc'
   - '+.qiushi.com'
   - '+.qiushibaike.com'
   - '+.qiushibang.com'
@@ -46012,7 +45968,6 @@ payload:
   - '+.rc114.com'
   - '+.rc3cr.com'
   - '+.rccchina.com'
-  - '+.rccoder.net'
   - '+.rcdang.com'
   - '+.rcdn.fun'
   - '+.rcfans.com'
@@ -47071,7 +47026,6 @@ payload:
   - '+.sanzangwang.com'
   - '+.sanzei.com'
   - '+.sao-ma.com'
-  - '+.sao.so'
   - '+.saoic.com'
   - '+.saomadang.com'
   - '+.saoniuhuo.com'
@@ -47355,6 +47309,7 @@ payload:
   - '+.sdgw.com'
   - '+.sdgwy.org'
   - '+.sdhangmoguan.com'
+  - '+.sdhdssd.com'
   - '+.sdhk2008.com'
   - '+.sdhoukang.com'
   - '+.sdhsie.com'
@@ -48114,7 +48069,6 @@ payload:
   - '+.shenduliaojie.com'
   - '+.shenduwin10.com'
   - '+.shenduwin8.com'
-  - '+.sheng-huo.org'
   - '+.shengangzc.com'
   - '+.shengbangshenghua.com'
   - '+.shengbaoluo.com'
@@ -48196,7 +48150,6 @@ payload:
   - '+.shentongdata.com'
   - '+.shenweimicro.com'
   - '+.shenweisupport.com'
-  - '+.shenwud.com'
   - '+.shenxianhua.com'
   - '+.shenxianyu.cc'
   - '+.shenxingnet.com'
@@ -48789,7 +48742,6 @@ payload:
   - '+.shumensy.com'
   - '+.shumiao.com'
   - '+.shumiimg.com'
-  - '+.shumil.co'
   - '+.shumil.com'
   - '+.shumilou.com'
   - '+.shumilou.org'
@@ -49230,7 +49182,6 @@ payload:
   - '+.sixflower.com'
   - '+.sixianchina.com'
   - '+.sixiang.im'
-  - '+.sixiangguo.net'
   - '+.sixiju.com'
   - '+.sixstaredu.com'
   - '+.sixu.life'
@@ -49573,6 +49524,7 @@ payload:
   - '+.smth.org'
   - '+.smthome.net'
   - '+.smtsvs.com'
+  - '+.smttouch.com'
   - '+.smtvip.com'
   - '+.smucdn.com'
   - '+.smudc.com'
@@ -51291,7 +51243,6 @@ payload:
   - '+.szxuexiao.com'
   - '+.szxxtx.com'
   - '+.szyfdz.net'
-  - '+.szyhljt.com'
   - '+.szyibei.com'
   - '+.szyin.com'
   - '+.szyingwei.com'
@@ -51662,7 +51613,6 @@ payload:
   - '+.taosj.com'
   - '+.taotao.com'
   - '+.taotaocar.com'
-  - '+.taotaosou.com'
   - '+.taotieren.com'
   - '+.taotiwang.com'
   - '+.taotu8.net'
@@ -55640,7 +55590,6 @@ payload:
   - '+.wanlan.vip'
   - '+.wanli.com'
   - '+.wanlitong.com'
-  - '+.wanliyouxuan.com'
   - '+.wanmei.com'
   - '+.wanmeila.com'
   - '+.wanmeilink.com'
@@ -55758,7 +55707,6 @@ payload:
   - '+.wave-optics.com'
   - '+.waveshare.net'
   - '+.wavideo.tv'
-  - '+.wavky.com'
   - '+.wavpub.com'
   - '+.wawa114.com'
   - '+.wawadns.com'
@@ -55962,6 +55910,7 @@ payload:
   - '+.wechat-data-rescue.com'
   - '+.wechat.ba'
   - '+.wechat.com'
+  - '+.wechat.org'
   - '+.wechat007.com'
   - '+.wechatapp.com'
   - '+.wechatify.net'
@@ -56194,7 +56143,6 @@ payload:
   - '+.weixingon.com'
   - '+.weixingongzuoshi.com'
   - '+.weixingv.com'
-  - '+.weixinhbs.com'
   - '+.weixinhost.com'
   - '+.weixinhow.com'
   - '+.weixinjia.net'
@@ -59121,7 +59069,6 @@ payload:
   - '+.xidong.net'
   - '+.xidongv.com'
   - '+.xiduobaby.com'
-  - '+.xiduoil.com'
   - '+.xie-jue-tui-xiao.com'
   - '+.xieat.com'
   - '+.xiebao18.com'
@@ -60086,7 +60033,6 @@ payload:
   - '+.xsesc.com'
   - '+.xsfaya.com'
   - '+.xsfc.com'
-  - '+.xshb.net'
   - '+.xshell.net'
   - '+.xshellcn.com'
   - '+.xshengyan.com'
@@ -60101,6 +60047,7 @@ payload:
   - '+.xsj2021888.com'
   - '+.xsjedu.org'
   - '+.xsjmc.net'
+  - '+.xsjs-cifs.com'
   - '+.xsjtxt.com'
   - '+.xsjwyx.com'
   - '+.xskhome.com'
@@ -61730,7 +61677,6 @@ payload:
   - '+.yinzhijie.com'
   - '+.yinzhizhu.com'
   - '+.yinzifang.com'
-  - '+.yinzige.com'
   - '+.yinziji.com'
   - '+.yinzuo100.com'
   - '+.yinzuojianshen.com'
@@ -63572,7 +63518,6 @@ payload:
   - '+.yymh999.com'
   - '+.yyming2.com'
   - '+.yymoban.com'
-  - '+.yyny.me'
   - '+.yyouren.com'
   - '+.yypcb.com'
   - '+.yypm.com'
@@ -64276,6 +64221,7 @@ payload:
   - '+.zhangqiaokeyan.com'
   - '+.zhangqiongjie.com'
   - '+.zhangqiu.cc'
+  - '+.zhangread.com'
   - '+.zhangrunnan.com'
   - '+.zhangsenhao.com'
   - '+.zhangshengrong.com'
@@ -65704,7 +65650,6 @@ payload:
   - '+.zmzjk.com'
   - '+.zmzjstu.com'
   - '+.zn8.com'
-  - '+.znb.me'
   - '+.znba.net'
   - '+.znbo.com'
   - '+.znczz.com'
