--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3876,7 +3876,6 @@ payload:
   - '+.5173.com'
   - '+.5173cdn.com'
   - '+.517best.com'
-  - '+.517dv.com'
   - '+.517ee.com'
   - '+.517hotel.com'
   - '+.517huizhou.com'
@@ -6621,7 +6620,6 @@ payload:
   - '+.8wq.com'
   - '+.8wss.com'
   - '+.8yao.cc'
-  - '+.8ybct.com'
   - '+.8ym8.com'
   - '+.8yw.xyz'
   - '+.8yzw.com'
@@ -6690,7 +6688,6 @@ payload:
   - '+.9154wan.com'
   - '+.915658.com'
   - '+.915799.com'
-  - '+.9158.com'
   - '+.9158ads.com'
   - '+.9158h5.com'
   - '+.915c.com'
@@ -8306,7 +8303,6 @@ payload:
   - '+.aisinogd.com'
   - '+.aisinogz.com'
   - '+.aisixiang.com'
-  - '+.aisk.me'
   - '+.aisky.cc'
   - '+.aiskycn.com'
   - '+.aisojie.com'
@@ -10187,6 +10183,7 @@ payload:
   - '+.banbaowang.com'
   - '+.banbf.com'
   - '+.banciyuan.me'
+  - '+.bandaoapp.com'
   - '+.bandaoningmeng.com'
   - '+.bandari.net'
   - '+.bandcevent.com'
@@ -11010,7 +11007,6 @@ payload:
   - '+.bianxianmao.com'
   - '+.bianxianwu.com'
   - '+.bianzhia.com'
-  - '+.bianzhihui.com'
   - '+.bianzhile.com'
   - '+.bianzhirensheng.com'
   - '+.biao12.com'
@@ -11536,7 +11532,6 @@ payload:
   - '+.bjjdwx.com'
   - '+.bjjf.cc'
   - '+.bjjfsd.com'
-  - '+.bjjhwlgs.com'
   - '+.bjjihui.com'
   - '+.bjjiubo.com'
   - '+.bjjkglxh.org'
@@ -16849,6 +16844,7 @@ payload:
   - '+.cqemme.com'
   - '+.cqfire.com'
   - '+.cqfuzhuang.com'
+  - '+.cqfygzfw.com'
   - '+.cqfzb.org'
   - '+.cqgc.com'
   - '+.cqggzy.com'
@@ -17179,7 +17175,6 @@ payload:
   - '+.cssf.net'
   - '+.cssforest.org'
   - '+.cssg-ahi.com'
-  - '+.cssgxmj.com'
   - '+.cssj.fun'
   - '+.csslcloud.net'
   - '+.cssmagic.net'
@@ -19597,7 +19592,6 @@ payload:
   - '+.doubimeizhi.com'
   - '+.doubimm.net'
   - '+.douboshi.net'
-  - '+.doubozhibo.com'
   - '+.douc.cc'
   - '+.doucang.com'
   - '+.douco.com'
@@ -22760,6 +22754,7 @@ payload:
   - '+.fkyuer.com'
   - '+.fkyun.com'
   - '+.fkzgz.com'
+  - '+.fl-ey.com'
   - '+.fl-game.net'
   - '+.fl0632.com'
   - '+.fl168.com'
@@ -24810,7 +24805,6 @@ payload:
   - '+.goufq.com'
   - '+.goug.com'
   - '+.gougoujp.com'
-  - '+.gougousc.com'
   - '+.gougoutxt.com'
   - '+.gouhai.com'
   - '+.gouhaowang.com'
@@ -27557,7 +27551,6 @@ payload:
   - '+.hlideal.com'
   - '+.hlj-aptech.com'
   - '+.hljjjb.com'
-  - '+.hljjxrc.com'
   - '+.hljjytkj.com'
   - '+.hljnzy.net'
   - '+.hljpost.com'
@@ -27641,7 +27634,6 @@ payload:
   - '+.hncsmjzs.com'
   - '+.hncsmtr.com'
   - '+.hncsvod.com'
-  - '+.hndbs.com'
   - '+.hndca.com'
   - '+.hndfbg.com'
   - '+.hndnews.com'
@@ -29930,7 +29922,6 @@ payload:
   - '+.ifaxin.com'
   - '+.ifaxin.org'
   - '+.ifc58.com'
-  - '+.ifchange.com'
   - '+.ifeimo.com'
   - '+.ifeng.com'
   - '+.ifeng.fm'
@@ -31018,7 +31009,6 @@ payload:
   - '+.isvee.com'
   - '+.isvjcloud.com'
   - '+.isvjd.com'
-  - '+.isw-ex.com'
   - '+.iswifting.com'
   - '+.it-api.com'
   - '+.it-bound.com'
@@ -32860,7 +32850,6 @@ payload:
   - '+.jk51.com'
   - '+.jk520.net'
   - '+.jk724.com'
-  - '+.jk8090.com'
   - '+.jkangbao.com'
   - '+.jkbexp.com'
   - '+.jkc8.com'
@@ -34129,7 +34118,6 @@ payload:
   - '+.kanjianlishi.com'
   - '+.kanjianxinli.com'
   - '+.kanjuqing.com'
-  - '+.kanjuwo.com'
   - '+.kankan365.cc'
   - '+.kankancity.com'
   - '+.kankanews.com'
@@ -36826,7 +36814,6 @@ payload:
   - '+.linyiren.com'
   - '+.linzhuotech.com'
   - '+.linzhuxin.com'
-  - '+.linzl.com'
   - '+.lion1ou.tech'
   - '+.lionaka.com'
   - '+.lionelliu.com'
@@ -37918,7 +37905,6 @@ payload:
   - '+.lwdjc.com'
   - '+.lweasy.com'
   - '+.lwedu.com'
-  - '+.lwen.org'
   - '+.lwfengji.net'
   - '+.lwfjmj.com'
   - '+.lwgsw.com'
@@ -38023,7 +38009,6 @@ payload:
   - '+.lyjxwl.com'
   - '+.lylryy.com'
   - '+.lymil.com'
-  - '+.lymlgj.com'
   - '+.lynkco.com'
   - '+.lynlzqy.com'
   - '+.lynr.com'
@@ -39063,7 +39048,6 @@ payload:
   - '+.menglangroup.com'
   - '+.menglechong.com'
   - '+.menglegame.com'
-  - '+.menglei.info'
   - '+.mengma.com'
   - '+.mengma021.com'
   - '+.mengniang.tv'
@@ -39150,7 +39134,6 @@ payload:
   - '+.mfcteda.com'
   - '+.mfexcel.com'
   - '+.mfisp.com'
-  - '+.mfjmedia.com'
   - '+.mfk.com'
   - '+.mfpad.com'
   - '+.mfpjrj.com'
@@ -41091,7 +41074,6 @@ payload:
   - '+.nesbbs.com'
   - '+.nestgene.com'
   - '+.nestlechinese.com'
-  - '+.nesxc.com'
   - '+.net-add.com'
   - '+.net-swift.com'
   - '+.net0516.com'
@@ -43184,7 +43166,6 @@ payload:
   - '+.pengqian.win'
   - '+.pengrl.com'
   - '+.pengshengcaishui.com'
-  - '+.pengxun1.com'
   - '+.pengyaou.com'
   - '+.pengyou.com'
   - '+.pengyoufx.com'
@@ -43546,6 +43527,7 @@ payload:
   - '+.pinyuan.cc'
   - '+.pinyuew.com'
   - '+.pinyuncloud.com'
+  - '+.pinzhi.org'
   - '+.pinzhikeji.net'
   - '+.pinzs.com'
   - '+.pioneerlinux.com'
@@ -46917,7 +46899,6 @@ payload:
   - '+.san-health.net'
   - '+.san-sheng.net'
   - '+.sancanal.com'
-  - '+.sanctpalace.com'
   - '+.sancunrenjian.org'
   - '+.sandaha.com'
   - '+.sandai.net'
@@ -47648,6 +47629,7 @@ payload:
   - '+.sf-airlines.com'
   - '+.sf-bearing.com'
   - '+.sf-card.com'
+  - '+.sf-cityrush.com'
   - '+.sf-companion.com'
   - '+.sf-dsc.com'
   - '+.sf-express.com'
@@ -47731,7 +47713,6 @@ payload:
   - '+.sh-dls.com'
   - '+.sh-eastwes.com'
   - '+.sh-ekeyboard.org'
-  - '+.sh-gmc.com'
   - '+.sh-henian.com'
   - '+.sh-hilead.com'
   - '+.sh-holiday.com'
@@ -52034,7 +52015,6 @@ payload:
   - '+.tfsino.com'
   - '+.tfsmy.com'
   - '+.tfxgt.com'
-  - '+.tfysw.com'
   - '+.tfyum.net'
   - '+.tfzcode.com'
   - '+.tg-vision.com'
@@ -52187,7 +52167,6 @@ payload:
   - '+.tiancaiui.com'
   - '+.tiancaixing.com'
   - '+.tianchu.com'
-  - '+.tiancipz.com'
   - '+.tiancity.com'
   - '+.tiancitycdn.com'
   - '+.tiandaoedu.com'
@@ -53183,7 +53162,6 @@ payload:
   - '+.tshtech.com'
   - '+.tsichuan.com'
   - '+.tsinghua-getinfo.com'
-  - '+.tsinghuabook.com'
   - '+.tsinghuaic.com'
   - '+.tsinghuaicwx.com'
   - '+.tsinghuajournals.com'
@@ -54542,6 +54520,7 @@ payload:
   - '+.uzaicdn.com'
   - '+.uzing.net'
   - '+.uzise.com'
+  - '+.uzmzm.com'
   - '+.uzshare.com'
   - '+.uzuzuz.com'
   - '+.uzzf.com'
@@ -56213,7 +56192,6 @@ payload:
   - '+.welinkpark.com'
   - '+.well8.com'
   - '+.wellant88.com'
-  - '+.wellcoding.com'
   - '+.wellhope.net'
   - '+.wellphp.com'
   - '+.wellpie.com'
@@ -58523,7 +58501,6 @@ payload:
   - '+.xi1361.com'
   - '+.xi5jie.com'
   - '+.xi9p.com'
-  - '+.xia.me'
   - '+.xia1ge.com'
   - '+.xiaa.net'
   - '+.xiabingbao.com'
@@ -61483,7 +61460,6 @@ payload:
   - '+.yikuaiqu.com'
   - '+.yikuns.com'
   - '+.yikuzy.com'
-  - '+.yilan.io'
   - '+.yilan.tv'
   - '+.yilanvaas.com'
   - '+.yile8.com'
@@ -61717,6 +61693,7 @@ payload:
   - '+.yiqisoo.com'
   - '+.yiqisooimg.com'
   - '+.yiqisou.net'
+  - '+.yiqistore.com'
   - '+.yiqitp.com'
   - '+.yiqiu.org'
   - '+.yiqiuu.com'
@@ -64474,7 +64451,6 @@ payload:
   - '+.zheyouxinxi.com'
   - '+.zhezheai.com'
   - '+.zhezhekan.com'
-  - '+.zhezhier.com'
   - '+.zhfc.com'
   - '+.zhfile.com'
   - '+.zhfund.com'
@@ -65243,7 +65219,6 @@ payload:
   - '+.zinewow.com'
   - '+.zing-api.com'
   - '+.zingke.com'
-  - '+.zingqi.com'
   - '+.ziniao.com'
   - '+.ziningmeng.com'
   - '+.ziniusoft.com'
