--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1064,7 +1064,6 @@ payload:
   - '+.120btc.com'
   - '+.120dxb.com'
   - '+.120fd.com'
-  - '+.120gz.com'
   - '+.120hpyy.com'
   - '+.120kaoshi.com'
   - '+.120kid.com'
@@ -7853,6 +7852,7 @@ payload:
   - '+.adxpand.com'
   - '+.adxqd.com'
   - '+.adxvip.com'
+  - '+.adyounger.com'
   - '+.adyun.com'
   - '+.adzh.com'
   - '+.adzhongdian.com'
@@ -25210,7 +25210,6 @@ payload:
   - '+.guideir.com'
   - '+.guiderank-app.com'
   - '+.guiderank.org'
-  - '+.guifan110.com'
   - '+.guifun.com'
   - '+.guigu.org'
   - '+.guiguzhongguo.com'
@@ -29872,6 +29871,7 @@ payload:
   - '+.ieeod0.com'
   - '+.ieepa.org'
   - '+.iefang.com'
+  - '+.iefans.net'
   - '+.iegcom.com'
   - '+.iegee.net'
   - '+.iegourl.com'
@@ -30974,7 +30974,6 @@ payload:
   - '+.isp.cx'
   - '+.ispeaken.com'
   - '+.ispecial.xyz'
-  - '+.isport2008.com'
   - '+.ispservice.cc'
   - '+.isqhy.com'
   - '+.isrcb.com'
@@ -35972,6 +35971,7 @@ payload:
   - '+.leenzhu.com'
   - '+.leeon.me'
   - '+.leepoint.net'
+  - '+.leeqing.com'
   - '+.leesou.com'
   - '+.leetcode-cn.com'
   - '+.leetcodechina.com'
@@ -49444,7 +49444,6 @@ payload:
   - '+.smgjj.com'
   - '+.smgstar.com'
   - '+.smhdoto.com'
-  - '+.smhom1.com'
   - '+.smhyplay.com'
   - '+.smianet.com'
   - '+.smic-sh.com'
@@ -49692,7 +49691,6 @@ payload:
   - '+.solosea.com'
   - '+.solotoon.com'
   - '+.solution9.net'
-  - '+.solvso.com'
   - '+.solvyou.com'
   - '+.somanhua.com'
   - '+.somao123.com'
@@ -54528,7 +54526,6 @@ payload:
   - '+.v4dwkcv.com'
   - '+.v5.com'
   - '+.v54321.com'
-  - '+.v58008.com'
   - '+.v5bjq.com'
   - '+.v5cam.com'
   - '+.v5cg.com'
