--- a/anti-ad-clash.yaml
+++ b/anti-ad-clash.yaml
@@ -1,8 +1,8 @@
 payload:
   - DOMAIN-SUFFIX,#TITLE=anti-AD
-  - DOMAIN-SUFFIX,#VER=20220523024259
+  - DOMAIN-SUFFIX,#VER=20220524175443
   - DOMAIN-SUFFIX,#URL=https://github.com/privacy-protection-tools/anti-AD
-  - DOMAIN-SUFFIX,#TOTAL_LINES=60636
+  - DOMAIN-SUFFIX,#TOTAL_LINES=60637
   - DOMAIN-SUFFIX,00-gov.cn
   - DOMAIN-SUFFIX,000123456789.online
   - DOMAIN-SUFFIX,000123456789.site
@@ -6348,6 +6348,7 @@ payload:
   - DOMAIN-SUFFIX,bmp.ali213.net
   - DOMAIN-SUFFIX,bmp1.ali213.net
   - DOMAIN-SUFFIX,web.ali213.net
+  - DOMAIN-SUFFIX,click.ali213.net
   - DOMAIN-SUFFIX,aliadvert.ru
   - DOMAIN-SUFFIX,umdc.aliapp.org
   - DOMAIN-SUFFIX,ynuf.aliapp.org
@@ -22863,6 +22864,7 @@ payload:
   - DOMAIN-SUFFIX,automate.gixxy.com
   - DOMAIN-SUFFIX,sourcepoint.gizmodo.com
   - DOMAIN-SUFFIX,www.gj500.com
+  - DOMAIN-SUFFIX,gjctwh.cn
   - DOMAIN-SUFFIX,5568.gjghy.com
   - DOMAIN-SUFFIX,gjh111.cn
   - DOMAIN-SUFFIX,m.gjiai.com
@@ -42164,7 +42166,6 @@ payload:
   - DOMAIN-SUFFIX,qhonzpl.cn
   - DOMAIN-SUFFIX,m.qhout.com
   - DOMAIN-SUFFIX,qhqofqeivtno.com
-  - DOMAIN-SUFFIX,qhres2.com
   - DOMAIN-SUFFIX,c.qhruixin.cn
   - DOMAIN-SUFFIX,v.qhruixin.cn
   - DOMAIN-SUFFIX,news.qhstatic.com
@@ -44717,7 +44718,6 @@ payload:
   - DOMAIN-SUFFIX,rulinecrea.xyz
   - DOMAIN-SUFFIX,rulkerton.site
   - DOMAIN-SUFFIX,rumanalytics.com
-  - DOMAIN-SUFFIX,rumble.com
   - DOMAIN-SUFFIX,rumerrand.com
   - DOMAIN-SUFFIX,rummyaffiliates.com
   - DOMAIN-SUFFIX,rumpelstiltskinhead.com
@@ -55483,6 +55483,7 @@ payload:
   - DOMAIN-SUFFIX,wbapp.uve.weibo.com
   - DOMAIN-SUFFIX,zc.biz.weibo.com
   - DOMAIN-SUFFIX,zymo.mps.weibo.com
+  - DOMAIN-SUFFIX,fastimage.uve.weibo.com
   - DOMAIN-SUFFIX,alitui.weibo.com.cn
   - DOMAIN-SUFFIX,biz.weibo.com.cn
   - DOMAIN-SUFFIX,game.weibo.com.cn
@@ -56585,7 +56586,6 @@ payload:
   - DOMAIN-SUFFIX,wpsweb-dc.wps.cn
   - DOMAIN-SUFFIX,adres.wpscdn.cn
   - DOMAIN-SUFFIX,img.gou.wpscdn.cn
-  - DOMAIN-SUFFIX,mo.res.wpscdn.cn
   - DOMAIN-SUFFIX,analytics.wpsermons.com
   - DOMAIN-SUFFIX,tracker.wpserveur.net
   - DOMAIN-SUFFIX,wpshsdk.com
@@ -57297,6 +57297,7 @@ payload:
   - DOMAIN-SUFFIX,zeus.ad.xiaomi.com
   - DOMAIN-SUFFIX,data.mistat.intl.xiaomi.com
   - DOMAIN-SUFFIX,admob.xiaomi.com
+  - DOMAIN-SUFFIX,t1.market.xiaomi.com
   - DOMAIN-SUFFIX,app.chat.xiaomi.net
   - DOMAIN-SUFFIX,lxcdn.dl.files.xiaomi.net
   - DOMAIN-SUFFIX,migrate.driveapi.micloud.xiaomi.net
