--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1556,7 +1556,6 @@ payload:
   - '+.1773.com'
   - '+.1778.com'
   - '+.177817.com'
-  - '+.178-go.com'
   - '+.178.com'
   - '+.178198.com'
   - '+.178448.com'
@@ -2821,7 +2820,6 @@ payload:
   - '+.333cn.com'
   - '+.333job.com'
   - '+.333ku.com'
-  - '+.333racing.com'
   - '+.333y3.com'
   - '+.334433.xyz'
   - '+.3344u.com'
@@ -4708,7 +4706,6 @@ payload:
   - '+.52xitong.com'
   - '+.52xiuxian.com'
   - '+.52xiyou.com'
-  - '+.52xpp.com'
   - '+.52xtxs.com'
   - '+.52xyz.com'
   - '+.52yawa.com'
@@ -7475,7 +7472,6 @@ payload:
   - '+.a135.net'
   - '+.a166.com'
   - '+.a1714.com'
-  - '+.a1a.me'
   - '+.a2048.com'
   - '+.a21fs.com'
   - '+.a21yishion.com'
@@ -8049,6 +8045,7 @@ payload:
   - '+.aiaor.com'
   - '+.aiba.com'
   - '+.aibaimm.com'
+  - '+.aibaix.com'
   - '+.aibang.com'
   - '+.aibang5.com'
   - '+.aibaov.com'
@@ -8803,7 +8800,6 @@ payload:
   - '+.analytics-china.com'
   - '+.analyticskey.com'
   - '+.anandoor.com'
-  - '+.anank.ke'
   - '+.ananzu.com'
   - '+.anatuprak.com'
   - '+.anav.com'
@@ -9703,6 +9699,7 @@ payload:
   - '+.avanpa.com'
   - '+.avatarmind.com'
   - '+.avatarmobi.com'
+  - '+.avatr.com'
   - '+.avc-mr.com'
   - '+.avc-ott.com'
   - '+.avdll.com'
@@ -10098,7 +10095,6 @@ payload:
   - '+.baixing.com'
   - '+.baixing.net'
   - '+.baixingcdn.com'
-  - '+.baixingfanli.com'
   - '+.baixingjd.com'
   - '+.baixingmall.com'
   - '+.baixingzixun.com'
@@ -10969,6 +10965,7 @@ payload:
   - '+.biacgn.com'
   - '+.bian-min.com'
   - '+.biancheng.net'
+  - '+.bianchengquan.com'
   - '+.biancui.com'
   - '+.bianews.com'
   - '+.bianfeng.com'
@@ -11840,6 +11837,7 @@ payload:
   - '+.bn016.com'
   - '+.bn13.com'
   - '+.bn54.com'
+  - '+.bnacg.com'
   - '+.bnapp.com'
   - '+.bnbcamp.com'
   - '+.bnbsky.com'
@@ -14040,6 +14038,7 @@ payload:
   - '+.chefafa.com'
   - '+.chefans.com'
   - '+.chefugao.com'
+  - '+.chegonggong.com'
   - '+.cheguanyi.com'
   - '+.chegud.com'
   - '+.cheguo.com'
@@ -15698,7 +15697,6 @@ payload:
   - '+.cmmim.com'
   - '+.cmnet-speed.com'
   - '+.cmnxt.com'
-  - '+.cmo.so'
   - '+.cmoct.com'
   - '+.cmodes.com'
   - '+.cmol.com'
@@ -19286,7 +19284,6 @@ payload:
   - '+.dns6132.com'
   - '+.dns6868.com'
   - '+.dns800.com'
-  - '+.dns999999.com'
   - '+.dnsapple.com'
   - '+.dnsapple.net'
   - '+.dnsce.com'
@@ -23262,6 +23259,7 @@ payload:
   - '+.funletu.com'
   - '+.funliving.com'
   - '+.funnulldns.com'
+  - '+.funnullv27.com'
   - '+.funnycore.com'
   - '+.funnypicsbox.com'
   - '+.funnyplaying.com'
@@ -25540,7 +25538,6 @@ payload:
   - '+.gzdai.com'
   - '+.gzdaily.com'
   - '+.gzdata.net'
-  - '+.gzdayang.com'
   - '+.gzdbx.com'
   - '+.gzdingyu.com'
   - '+.gzdinuan.com'
@@ -28262,6 +28259,7 @@ payload:
   - '+.htstzm.com'
   - '+.htt5.com'
   - '+.httingshu.com'
+  - '+.httpcanary.com'
   - '+.httpcn.com'
   - '+.hturl.cc'
   - '+.htuwenming.com'
@@ -28523,6 +28521,7 @@ payload:
   - '+.huaxiaci.com'
   - '+.huaxiaf.com'
   - '+.huaxiangdiao.com'
+  - '+.huaxiaobaokeji.com'
   - '+.huaxiazi.com'
   - '+.huaxincem.com'
   - '+.huaxing.com'
@@ -31405,6 +31404,7 @@ payload:
   - '+.izacholsm.com'
   - '+.izaodao.com'
   - '+.izazamall.com'
+  - '+.izdatatech.com'
   - '+.izestchina.com'
   - '+.izhangchu.com'
   - '+.izhangheng.com'
@@ -31838,7 +31838,6 @@ payload:
   - '+.jhssapp.com'
   - '+.jht868.com'
   - '+.jhtcgroup.com'
-  - '+.jhua168.com'
   - '+.jhwaimai.com'
   - '+.jhwl444.com'
   - '+.jhwrsq.com'
@@ -32519,7 +32518,6 @@ payload:
   - '+.jinyunfood.com'
   - '+.jinyunweb.com'
   - '+.jinyuzd.cc'
-  - '+.jinzhandaily.com'
   - '+.jinzheled.com'
   - '+.jinzhidagl.com'
   - '+.jinzhoubank.com'
@@ -34601,6 +34599,7 @@ payload:
   - '+.kjeport.com'
   - '+.kjiuye.com'
   - '+.kjj.com'
+  - '+.kjjl100.com'
   - '+.kjkd.com'
   - '+.kjkp.com'
   - '+.kjks.net'
@@ -35071,7 +35070,6 @@ payload:
   - '+.kuailesh.com'
   - '+.kuailetongyao.com'
   - '+.kuaileworld.com'
-  - '+.kuailexinli.com'
   - '+.kuailexs.com'
   - '+.kuailezu.com'
   - '+.kuailiyu.com'
@@ -39847,6 +39845,7 @@ payload:
   - '+.moejam.com'
   - '+.moejj.com'
   - '+.moejp.com'
+  - '+.moeking.me'
   - '+.moeli123.com'
   - '+.moemiao.net'
   - '+.moenis.com'
@@ -40302,7 +40301,6 @@ payload:
   - '+.mufengyue.com'
   - '+.muftc.com'
   - '+.mugeda.com'
-  - '+.muguaddy.com'
   - '+.muhai.net'
   - '+.muhoujiemi.com'
   - '+.muimg.com'
@@ -42769,7 +42767,6 @@ payload:
   - '+.pan8.net'
   - '+.panabit.com'
   - '+.panchuang.net'
-  - '+.pancishe.com'
   - '+.panda-home.com'
   - '+.panda321.com'
   - '+.panda98.com'
@@ -44381,9 +44378,9 @@ payload:
   - '+.qefeng.com'
   - '+.qeto.com'
   - '+.qf027.com'
+  - '+.qf15.cc'
   - '+.qfang.com'
   - '+.qfangimg.com'
-  - '+.qfcm.net'
   - '+.qfedu.com'
   - '+.qfeiche.com'
   - '+.qfgolang.com'
@@ -48561,6 +48558,7 @@ payload:
   - '+.shuame.com'
   - '+.shuanghui.net'
   - '+.shuangkuai.co'
+  - '+.shuangmei2008.com'
   - '+.shuangtao.com'
   - '+.shuangtv.net'
   - '+.shuangxian.com'
@@ -51332,7 +51330,6 @@ payload:
   - '+.taiyulink.com'
   - '+.taizibao.com'
   - '+.tajdny.com'
-  - '+.tajubao.com'
   - '+.tajyw.net'
   - '+.takungae.com'
   - '+.takungpao.com'
@@ -51614,7 +51611,6 @@ payload:
   - '+.taxwen.com'
   - '+.tayohya.com'
   - '+.tazhe.com'
-  - '+.tb.am'
   - '+.tb51.net'
   - '+.tb58.net'
   - '+.tb888.net'
@@ -52652,7 +52648,6 @@ payload:
   - '+.tok9.com'
   - '+.token-ad.com'
   - '+.tokenglish.com'
-  - '+.tokeninsight.com'
   - '+.tokenpocket.pro'
   - '+.tokensky.net'
   - '+.tokenview.com'
@@ -55572,6 +55567,7 @@ payload:
   - '+.wantrack-nj.com'
   - '+.wantshopping.ltd'
   - '+.wantumusic.com'
+  - '+.wantwords.net'
   - '+.wanwanol.com'
   - '+.wanweipc.com'
   - '+.wanweixin.com'
@@ -56768,7 +56764,6 @@ payload:
   - '+.win-ke.com'
   - '+.win-man.com'
   - '+.win.hn'
-  - '+.win007.com'
   - '+.win1032.com'
   - '+.win1064.com'
   - '+.win10cjb.com'
@@ -56928,7 +56923,6 @@ payload:
   - '+.withmedia.net'
   - '+.withpinbox.com'
   - '+.withsccdn.com'
-  - '+.withsin.com'
   - '+.withubit.org'
   - '+.withzz.com'
   - '+.witkey.com'
@@ -62800,7 +62794,6 @@ payload:
   - '+.yudianda.com'
   - '+.yudiangame.vip'
   - '+.yudouyudou.com'
-  - '+.yudwl.com'
   - '+.yue365.com'
   - '+.yue7.com'
   - '+.yuebagu.com'
