--- a/directbak.yaml
+++ b/directbak.yaml
@@ -276,7 +276,6 @@ payload:
   - '+.029wsw.com'
   - '+.029yjy.com'
   - '+.029yljj.com'
-  - '+.029yuezi.com'
   - '+.029zp.com'
   - '+.02edu.com'
   - '+.02kdid.com'
@@ -8916,7 +8915,6 @@ payload:
   - '+.anmoxiansheng.com'
   - '+.ann9.com'
   - '+.annangela.moe'
-  - '+.annchain.io'
   - '+.anneishuo.com'
   - '+.annelhair.com'
   - '+.annhe.net'
@@ -10576,7 +10574,6 @@ payload:
   - '+.bdfkb.com'
   - '+.bdfzcd.net'
   - '+.bdfzgz.net'
-  - '+.bdfzxj.net'
   - '+.bdgslb.com'
   - '+.bdhuakan.com'
   - '+.bdi.pub'
@@ -22765,7 +22762,6 @@ payload:
   - '+.flintos.com'
   - '+.flip.fun'
   - '+.fliplus.com'
-  - '+.flnet.com'
   - '+.flomoapp.com'
   - '+.flooc.com'
   - '+.floorb2b.com'
@@ -22795,7 +22791,6 @@ payload:
   - '+.fly3949.com'
   - '+.fly63.com'
   - '+.flyacat.com'
-  - '+.flybridal.com'
   - '+.flyco.com'
   - '+.flycua.com'
   - '+.flydigi.com'
@@ -30928,6 +30923,7 @@ payload:
   - '+.isigu.com'
   - '+.isilicontech.com'
   - '+.isinosig.com'
+  - '+.isixiang.com'
   - '+.isixue.com'
   - '+.isjike.com'
   - '+.iskcd.com'
@@ -32798,7 +32794,6 @@ payload:
   - '+.jjwxc.org'
   - '+.jjx88.net'
   - '+.jjxj.org'
-  - '+.jjxsw.la'
   - '+.jjxwzk.org'
   - '+.jjxyls.com'
   - '+.jjy118.com'
@@ -37070,7 +37065,6 @@ payload:
   - '+.llewan.com'
   - '+.llgjx.com'
   - '+.llgkm.com'
-  - '+.llgo.work'
   - '+.llidc.com'
   - '+.lljgame.com'
   - '+.lljgxx.com'
@@ -40010,6 +40004,7 @@ payload:
   - '+.mopicer.com'
   - '+.mopoint.com'
   - '+.mopsky.com'
+  - '+.mopxz.com'
   - '+.moqifei.com'
   - '+.moqikaka.com'
   - '+.moqilin.net'
@@ -40250,6 +40245,7 @@ payload:
   - '+.mtkan.net'
   - '+.mtkdy.com'
   - '+.mtketang.com'
+  - '+.mtkpacker.com'
   - '+.mtksj.com'
   - '+.mtktk.com'
   - '+.mtm.mo'
@@ -41517,7 +41513,6 @@ payload:
   - '+.nmbgjx.com'
   - '+.nmet168.com'
   - '+.nmgd.com'
-  - '+.nmgdw.com'
   - '+.nmgfood.net'
   - '+.nmgfrank.com'
   - '+.nmggyy.com'
@@ -44574,7 +44569,6 @@ payload:
   - '+.qianxinet.com'
   - '+.qianxs.com'
   - '+.qianxun.com'
-  - '+.qianyan.biz'
   - '+.qianyan001.com'
   - '+.qianyu56.com'
   - '+.qianyuangx.com'
@@ -46717,7 +46711,6 @@ payload:
   - '+.rxys.com'
   - '+.ryanbencapital.com'
   - '+.ryanc.cc'
-  - '+.ryanyuanao.xyz'
   - '+.rybbaby.com'
   - '+.ryc360.com'
   - '+.rydth5.com'
@@ -46791,7 +46784,6 @@ payload:
   - '+.safehoo.com'
   - '+.safejmp.com'
   - '+.safenext.com'
-  - '+.safestdns.com'
   - '+.safewiki.org'
   - '+.sagetrc.com'
   - '+.sagocloud.com'
@@ -47608,7 +47600,6 @@ payload:
   - '+.sfgj.org'
   - '+.sfgy.org'
   - '+.sfht.com'
-  - '+.sfhxdfgl.com'
   - '+.sfile2012.com'
   - '+.sfitcdp.com'
   - '+.sfjdml.com'
@@ -56311,6 +56302,7 @@ payload:
   - '+.westbund.com'
   - '+.weste.net'
   - '+.westengine.com'
+  - '+.westfutu.com'
   - '+.westleadfund.com'
   - '+.westonecloud.com'
   - '+.westpac.group'
@@ -57255,7 +57247,6 @@ payload:
   - '+.wopaiyi.com'
   - '+.wopaper.com'
   - '+.wopaw.com'
-  - '+.wopeng.net'
   - '+.wopus.org'
   - '+.woqidege.com'
   - '+.woqifoundation.com'
@@ -60297,6 +60288,7 @@ payload:
   - '+.xupu120.com'
   - '+.xuqyfw.com'
   - '+.xuruowei.com'
+  - '+.xusseo.com'
   - '+.xuxian.com'
   - '+.xuxian.me'
   - '+.xuxueli.com'
@@ -61318,6 +61310,7 @@ payload:
   - '+.yifanmedia.net'
   - '+.yifansuo.com'
   - '+.yifatong.com'
+  - '+.yifei.space'
   - '+.yifeisoft.com'
   - '+.yifeiyuan.me'
   - '+.yifen.com'
@@ -66288,7 +66281,6 @@ payload:
   - '+.zzhybz.com'
   - '+.zzidc.com'
   - '+.zzit.org'
-  - '+.zzjaz.com'
   - '+.zzjc5.com'
   - '+.zzjunzhi.com'
   - '+.zzjunzhuo.com'
