--- a/directbak.yaml
+++ b/directbak.yaml
@@ -8109,7 +8109,6 @@ payload:
   - '+.aihuaju.com'
   - '+.aihuau.com'
   - '+.aihuishou.com'
-  - '+.aihundan.com'
   - '+.aihuo.cc'
   - '+.aii-alliance.org'
   - '+.aiijournal.com'
@@ -10106,6 +10105,7 @@ payload:
   - '+.bamboo18.com'
   - '+.bamenzhushou.com'
   - '+.bamuyu.com'
+  - '+.bamxs.com'
   - '+.bananalighter.com'
   - '+.bananau.com'
   - '+.bananaumbrella.com'
