--- a/directbak.yaml
+++ b/directbak.yaml
@@ -3485,6 +3485,7 @@ payload:
   - '+.400qikan.com'
   - '+.400vv.com'
   - '+.400web.com'
+  - '+.402043.com'
   - '+.402333b.com'
   - '+.40279.com'
   - '+.4040001.com'
@@ -7719,7 +7720,6 @@ payload:
   - '+.admintony.com'
   - '+.adminxue.com'
   - '+.adminxy.com'
-  - '+.admire.so'
   - '+.admpub.com'
   - '+.admqr.com'
   - '+.adnineplus.com'
@@ -9886,7 +9886,6 @@ payload:
   - '+.baidu.com'
   - '+.baidu.jp'
   - '+.baidu.mobi'
-  - '+.baidu.net'
   - '+.baidu.to'
   - '+.baidu1.com'
   - '+.baidu120.cc'
@@ -10267,6 +10266,7 @@ payload:
   - '+.baosteel.com'
   - '+.baostock.com'
   - '+.baotime.com'
+  - '+.baotoulawyer.com'
   - '+.baotoushizx.com'
   - '+.baotuba.com'
   - '+.baowu.com'
@@ -10385,7 +10385,6 @@ payload:
   - '+.bbbbbb.me'
   - '+.bbbtgo.com'
   - '+.bbbvip.com'
-  - '+.bbcmart.com'
   - '+.bbcss.com'
   - '+.bbctop.com'
   - '+.bbcyw.com'
@@ -16034,6 +16033,7 @@ payload:
   - '+.cnmineqs.net'
   - '+.cnmo.com'
   - '+.cnmobile.net'
+  - '+.cnmods.net'
   - '+.cnmods.org'
   - '+.cnmsl.net'
   - '+.cnmsn.net'
@@ -17224,7 +17224,6 @@ payload:
   - '+.cudaojia.com'
   - '+.cuebzzy.com'
   - '+.cuelog.com'
-  - '+.cufeoec.com'
   - '+.cufeyk.com'
   - '+.cufou.com'
   - '+.cug2313.com'
@@ -17593,7 +17592,6 @@ payload:
   - '+.dachuw.com'
   - '+.dachuw.net'
   - '+.dadaabc.com'
-  - '+.dadaabcc.com'
   - '+.dadagame.com'
   - '+.dadagem.xyz'
   - '+.dadaizi.com'
@@ -21509,7 +21507,6 @@ payload:
   - '+.exchangecn.com'
   - '+.exchen.net'
   - '+.exdoll.com'
-  - '+.exezhanqun.com'
   - '+.exfree.com'
   - '+.exhera.com'
   - '+.exiaoba.com'
@@ -24191,7 +24188,6 @@ payload:
   - '+.gitnavi.com'
   - '+.gitnoteapp.com'
   - '+.gitnova.com'
-  - '+.gitos.net'
   - '+.gitsea.com'
   - '+.gitv.tv'
   - '+.gityuan.com'
@@ -30886,7 +30882,6 @@ payload:
   - '+.it689.com'
   - '+.it69.net'
   - '+.it707.com'
-  - '+.it7e.com'
   - '+.it7t.com'
   - '+.it918.com'
   - '+.it985.com'
@@ -31408,7 +31403,6 @@ payload:
   - '+.jbedu.org'
   - '+.jbelf.com'
   - '+.jbfoundry.com'
-  - '+.jbpbox.com'
   - '+.jbqipa.com'
   - '+.jbryun.com'
   - '+.jbxy.com'
@@ -37569,7 +37563,6 @@ payload:
   - '+.luoboxia.com'
   - '+.luochen.com'
   - '+.luochenyl.com'
-  - '+.luochenzhimu.com'
   - '+.luochunhui.com'
   - '+.luocs.cc'
   - '+.luodaoyi.com'
@@ -39107,6 +39100,7 @@ payload:
   - '+.michplay.com'
   - '+.miclle.com'
   - '+.mico.io'
+  - '+.micrenzheng.com'
   - '+.micro-bee.com'
   - '+.micro-servs.com'
   - '+.microad-cn.com'
@@ -41913,6 +41907,7 @@ payload:
   - '+.oilchem.net'
   - '+.oilepay.com'
   - '+.oilhr.com'
+  - '+.oilmooc.com'
   - '+.oinva5yl.com'
   - '+.oiuwe.com'
   - '+.oj03.com'
@@ -43143,7 +43138,6 @@ payload:
   - '+.physicalchina.vip'
   - '+.phyt88.com'
   - '+.phyy.com'
-  - '+.phyy1.com'
   - '+.pi7.com'
   - '+.piadu.com'
   - '+.pianhd.com'
@@ -44916,6 +44910,7 @@ payload:
   - '+.qkcdn.com'
   - '+.qkeke.com'
   - '+.qkhtml.com'
+  - '+.qking.ink'
   - '+.qkkjd.com'
   - '+.qkl123.com'
   - '+.qknown.com'
@@ -50975,6 +50970,7 @@ payload:
   - '+.sztara.com'
   - '+.szteacher.net'
   - '+.sztkc.com'
+  - '+.sztmt.com'
   - '+.sztongdazulin.com'
   - '+.sztopbrand.com'
   - '+.sztspi.com'
@@ -53031,7 +53027,6 @@ payload:
   - '+.ttkyy.net'
   - '+.ttll.cc'
   - '+.ttlsa.com'
-  - '+.ttlutuan.com'
   - '+.ttmark.com'
   - '+.ttmd5.com'
   - '+.ttmeishi.com'
@@ -55014,6 +55009,7 @@ payload:
   - '+.vysj.com'
   - '+.vyuan8.com'
   - '+.vyun.com'
+  - '+.vz1m.com'
   - '+.vz41.com'
   - '+.vzan.cc'
   - '+.vzan.com'
@@ -55610,7 +55606,6 @@ payload:
   - '+.webaner.com'
   - '+.webank.com'
   - '+.webankcdn.net'
-  - '+.webcname.net'
   - '+.webdissector.com'
   - '+.webdiyer.com'
   - '+.webdriver.org'
@@ -57532,6 +57527,7 @@ payload:
   - '+.wuyazi.com'
   - '+.wuyecao.net'
   - '+.wuyehr.com'
+  - '+.wuyenews.com'
   - '+.wuyida.com'
   - '+.wuyishan.net'
   - '+.wuyou.com'
@@ -58867,7 +58863,6 @@ payload:
   - '+.xihawan8.com'
   - '+.xihuan.me'
   - '+.xihuanfang.com'
-  - '+.xihuojie.com'
   - '+.xihusgh.com'
   - '+.xihustateguesthangzhou.com'
   - '+.xiimoon.com'
@@ -58902,6 +58897,7 @@ payload:
   - '+.xin.xin'
   - '+.xin1234.com'
   - '+.xin3721.com'
+  - '+.xin6.net'
   - '+.xinaigame.com'
   - '+.xinaitu.com'
   - '+.xinanidc.com'
@@ -63315,7 +63311,6 @@ payload:
   - '+.yzintelligence.com'
   - '+.yzinter.com'
   - '+.yzipi.com'
-  - '+.yzjbh.com'
   - '+.yzjjw.net'
   - '+.yzjsxy.com'
   - '+.yzkimage.com'
