--- a/anti-ad-clash.yaml
+++ b/anti-ad-clash.yaml
@@ -1,8 +1,8 @@
 payload:
   - DOMAIN-SUFFIX,#TITLE=anti-AD
-  - DOMAIN-SUFFIX,#VER=20220623024632
+  - DOMAIN-SUFFIX,#VER=20220623231705
   - DOMAIN-SUFFIX,#URL=https://github.com/privacy-protection-tools/anti-AD
-  - DOMAIN-SUFFIX,#TOTAL_LINES=61163
+  - DOMAIN-SUFFIX,#TOTAL_LINES=61181
   - DOMAIN-SUFFIX,000123456789.online
   - DOMAIN-SUFFIX,000123456789.site
   - DOMAIN-SUFFIX,000123456789.space
@@ -1664,6 +1664,8 @@ payload:
   - DOMAIN-SUFFIX,m.4qonm.cn
   - DOMAIN-SUFFIX,4rabettraff.com
   - DOMAIN-SUFFIX,4rgm6z478o.cn
+  - DOMAIN-SUFFIX,4rw6x0b.cn
+  - DOMAIN-SUFFIX,5rd25e.4rw6x0b.cn
   - DOMAIN-SUFFIX,eo.4s5n.cn
   - DOMAIN-SUFFIX,mo.4s5n.cn
   - DOMAIN-SUFFIX,4skd2j.cn
@@ -1702,6 +1704,10 @@ payload:
   - DOMAIN-SUFFIX,m.50j33.cn
   - DOMAIN-SUFFIX,50milan.xyz
   - DOMAIN-SUFFIX,50trk.com
+  - DOMAIN-SUFFIX,50union.com
+  - DOMAIN-SUFFIX,www.50union.com
+  - DOMAIN-SUFFIX,mclean.50union.com
+  - DOMAIN-SUFFIX,mvconf.50union.com
   - DOMAIN-SUFFIX,rfir2.50w.me
   - DOMAIN-SUFFIX,50zera.com
   - DOMAIN-SUFFIX,51-tour.net
@@ -2648,6 +2654,7 @@ payload:
   - DOMAIN-SUFFIX,825145.com
   - DOMAIN-SUFFIX,www.8269996.com
   - DOMAIN-SUFFIX,827fa7c868b4b.com
+  - DOMAIN-SUFFIX,8289.tv
   - DOMAIN-SUFFIX,82dbb7897b.com
   - DOMAIN-SUFFIX,82eb361582.com
   - DOMAIN-SUFFIX,82o9v830.com
@@ -18420,6 +18427,8 @@ payload:
   - DOMAIN-SUFFIX,dvigukindal.com
   - DOMAIN-SUFFIX,dvitohrrmq.xyz
   - DOMAIN-SUFFIX,dviwjuggl.com
+  - DOMAIN-SUFFIX,dvkbfj.cn
+  - DOMAIN-SUFFIX,www.dvkbfj.cn
   - DOMAIN-SUFFIX,dvnfo.com
   - DOMAIN-SUFFIX,dvnmyltt.xyz
   - DOMAIN-SUFFIX,dvoyy3qexr.com
@@ -19189,6 +19198,8 @@ payload:
   - DOMAIN-SUFFIX,m.ei4f.cn
   - DOMAIN-SUFFIX,eiasia.ltd
   - DOMAIN-SUFFIX,eiasninancu.com
+  - DOMAIN-SUFFIX,eib2.cc
+  - DOMAIN-SUFFIX,app.eib2.cc
   - DOMAIN-SUFFIX,ct.eid.co.nz
   - DOMAIN-SUFFIX,7mx.eider.com
   - DOMAIN-SUFFIX,eidsign.com.cn
@@ -30554,6 +30565,7 @@ payload:
   - DOMAIN-SUFFIX,pixel.kknews.cc
   - DOMAIN-SUFFIX,kkpqhqu.cn
   - DOMAIN-SUFFIX,k.kksgl.top
+  - DOMAIN-SUFFIX,kktly.cn
   - DOMAIN-SUFFIX,kkuuu.top
   - DOMAIN-SUFFIX,kl-toys.com
   - DOMAIN-SUFFIX,www.kl-toys.com
@@ -32198,7 +32210,6 @@ payload:
   - DOMAIN-SUFFIX,www.linksjg.cn
   - DOMAIN-SUFFIX,linkslot.ru
   - DOMAIN-SUFFIX,linksmart.com
-  - DOMAIN-SUFFIX,linksnappy.com
   - DOMAIN-SUFFIX,linkstorm.net
   - DOMAIN-SUFFIX,ad.linksynergy.com
   - DOMAIN-SUFFIX,ads.rd.linksynergy.com
@@ -35172,7 +35183,6 @@ payload:
   - DOMAIN-SUFFIX,etl.xlmc.sec.miui.com
   - DOMAIN-SUFFIX,fb.xk.miui.com
   - DOMAIN-SUFFIX,fcanr.tracking.miui.com
-  - DOMAIN-SUFFIX,hot.browser.miui.com
   - DOMAIN-SUFFIX,info.analysis.kp.sec.miui.com
   - DOMAIN-SUFFIX,info.sec.miui.com
   - DOMAIN-SUFFIX,metok.sys.miui.com
@@ -35276,6 +35286,8 @@ payload:
   - DOMAIN-SUFFIX,mlovem.pw
   - DOMAIN-SUFFIX,mlre.com.cn
   - DOMAIN-SUFFIX,mlrkqwlcetqwxwl.xyz
+  - DOMAIN-SUFFIX,mlsjh.com
+  - DOMAIN-SUFFIX,mh1.mlsjh.com
   - DOMAIN-SUFFIX,mlstat.com
   - DOMAIN-SUFFIX,analytics.mlstatic.com
   - DOMAIN-SUFFIX,mlsys.xyz
@@ -41324,6 +41336,8 @@ payload:
   - DOMAIN-SUFFIX,postclickmarketing.com
   - DOMAIN-SUFFIX,sp.postcrescent.com
   - DOMAIN-SUFFIX,kqkydl.postel-deluxe.ru
+  - DOMAIN-SUFFIX,postex10.com
+  - DOMAIN-SUFFIX,land3.postex10.com
   - DOMAIN-SUFFIX,track.postkodlotteriet.se
   - DOMAIN-SUFFIX,postlnk.com
   - DOMAIN-SUFFIX,fleet-eml.postmates.com
@@ -45038,6 +45052,8 @@ payload:
   - DOMAIN-SUFFIX,rsalcau.com
   - DOMAIN-SUFFIX,rsalcch.com
   - DOMAIN-SUFFIX,rsaltsjt.com
+  - DOMAIN-SUFFIX,rscc3.cc
+  - DOMAIN-SUFFIX,stat.rscc3.cc
   - DOMAIN-SUFFIX,rscxwmj.cn
   - DOMAIN-SUFFIX,c.rscxwmj.cn
   - DOMAIN-SUFFIX,mldy.rsgbt.cn
@@ -49419,6 +49435,8 @@ payload:
   - DOMAIN-SUFFIX,suitesbahrag.icu
   - DOMAIN-SUFFIX,suitesmart.com
   - DOMAIN-SUFFIX,suitsoon.com
+  - DOMAIN-SUFFIX,sujev.cn
+  - DOMAIN-SUFFIX,e5m2gp.sujev.cn
   - DOMAIN-SUFFIX,sulcateeclogue.com
   - DOMAIN-SUFFIX,sulkybutter.com
   - DOMAIN-SUFFIX,sulkycook.com
