--- a/directbak.yaml
+++ b/directbak.yaml
@@ -2982,6 +2982,7 @@ payload:
   - '+.360sides.com'
   - '+.360sok.com'
   - '+.360stamp.com'
+  - '+.360tianma.com'
   - '+.360tong.net'
   - '+.360top.com'
   - '+.360totalsecurity.com'
@@ -4975,6 +4976,7 @@ payload:
   - '+.58wan.com'
   - '+.58wangwei.com'
   - '+.58wanwan.com'
+  - '+.58woyou.com'
   - '+.58wzb.com'
   - '+.58xinrui.com'
   - '+.58xs.com'
@@ -11844,6 +11846,7 @@ payload:
   - '+.boleihg.com'
   - '+.bolejiang.com'
   - '+.bolelink.com'
+  - '+.bolexiaozhao.com'
   - '+.boll.me'
   - '+.bolo.me'
   - '+.bolopp.com'
@@ -12467,6 +12470,7 @@ payload:
   - '+.c-canyin.com'
   - '+.c-cnc.com'
   - '+.c-ctrip.com'
+  - '+.c-e-m.com'
   - '+.c-estbon.com'
   - '+.c-fol.net'
   - '+.c-lion.com'
@@ -15195,6 +15199,7 @@ payload:
   - '+.ciif-expo.com'
   - '+.ciiip.com'
   - '+.ciimg.com'
+  - '+.ciji234.com'
   - '+.cijilu.com'
   - '+.ciku5.com'
   - '+.cili001.com'
@@ -22668,6 +22673,7 @@ payload:
   - '+.flyfish8.com'
   - '+.flyfishx.com'
   - '+.flyfunny.com'
+  - '+.flygo.net'
   - '+.flygon.net'
   - '+.flyguest.com'
   - '+.flyine.net'
@@ -26932,6 +26938,7 @@ payload:
   - '+.hf12345.vip'
   - '+.hf365.com'
   - '+.hf777.com'
+  - '+.hfanss.com'
   - '+.hfbaogao.com'
   - '+.hfbeta.com'
   - '+.hfbz.com'
@@ -27696,6 +27703,7 @@ payload:
   - '+.hongyunlww.com'
   - '+.hongyunvren.com'
   - '+.hongze.net'
+  - '+.hongzetai.com'
   - '+.hongzhoukan.com'
   - '+.hongztl.com'
   - '+.honkaiimpact3.com'
@@ -28715,6 +28723,7 @@ payload:
   - '+.huoshan.club'
   - '+.huoshan.com'
   - '+.huoshanimg.com'
+  - '+.huoshanlive.com'
   - '+.huoshanstatic.com'
   - '+.huoshansxy.com'
   - '+.huoshanvod.com'
@@ -29893,6 +29902,7 @@ payload:
   - '+.ihungyi.com'
   - '+.ihuochaihe.com'
   - '+.ihuoqiu.com'
+  - '+.ihuoshanlive.com'
   - '+.ihuoyan.com'
   - '+.ihuyi.com'
   - '+.ihuzuan.com'
@@ -31920,6 +31930,7 @@ payload:
   - '+.jiawei.xin'
   - '+.jiawentrans.com'
   - '+.jiawin.com'
+  - '+.jiaxianggame.com'
   - '+.jiaxiaozhijia.com'
   - '+.jiaxichina.net'
   - '+.jiaxin-industry.com'
@@ -32894,6 +32905,7 @@ payload:
   - '+.joytrav.com'
   - '+.joytraveller.com'
   - '+.joyu.com'
+  - '+.joyuai.com'
   - '+.joyulf.com'
   - '+.joyuyx.com'
   - '+.joywii.net'
@@ -33005,7 +33017,6 @@ payload:
   - '+.js3.org'
   - '+.js3n.com'
   - '+.js53777.com'
-  - '+.js66649.com'
   - '+.js7xc.com'
   - '+.js8.in'
   - '+.js811.com'
@@ -36058,6 +36069,7 @@ payload:
   - '+.lgexam.com'
   - '+.lghsrh.com'
   - '+.lgimg.com'
+  - '+.lgmi.com'
   - '+.lgmjg.com'
   - '+.lgo100.com'
   - '+.lgole.com'
@@ -38850,6 +38862,7 @@ payload:
   - '+.metacd.com'
   - '+.metal-min.com'
   - '+.metalchina.com'
+  - '+.metasecurities.com'
   - '+.meten.com'
   - '+.meteni.com'
   - '+.metenk12.com'
@@ -39486,6 +39499,7 @@ payload:
   - '+.mmgl.net'
   - '+.mmgogo.com'
   - '+.mmhktv.com'
+  - '+.mmhygame.com'
   - '+.mmi-shanghai.com'
   - '+.mmia.com'
   - '+.mmim8.com'
@@ -42070,6 +42084,7 @@ payload:
   - '+.ooopn.com'
   - '+.ooppoo.com'
   - '+.oouee.com'
+  - '+.oouyan.com'
   - '+.ooxx.me'
   - '+.ooxxc.com'
   - '+.op86.net'
@@ -44662,6 +44677,7 @@ payload:
   - '+.qiongming.com'
   - '+.qiongri.com'
   - '+.qipacao.com'
+  - '+.qipai007.com'
   - '+.qipaifan.com'
   - '+.qipamaijia.com'
   - '+.qipeiren.com'
@@ -44770,6 +44786,7 @@ payload:
   - '+.qiyenet.net'
   - '+.qiyeshangpu.com'
   - '+.qiyeshangpu.net'
+  - '+.qiyetong.com'
   - '+.qiyetuozhan.com'
   - '+.qiyeweixin.com'
   - '+.qiyewenhua.net'
@@ -45234,6 +45251,7 @@ payload:
   - '+.quba360.com'
   - '+.qubaike.com'
   - '+.qubaishu.com'
+  - '+.qubaobei.com'
   - '+.qucai.com'
   - '+.qucaiad.com'
   - '+.qucaidd.com'
@@ -46333,6 +46351,7 @@ payload:
   - '+.rtxuc.com'
   - '+.ru4.com'
   - '+.ruaimi.com'
+  - '+.ruan8.com'
   - '+.ruancan.com'
   - '+.ruandy.com'
   - '+.ruanfujia.com'
@@ -47626,6 +47645,7 @@ payload:
   - '+.shanshoufu.com'
   - '+.shantoumama.com'
   - '+.shanweinews.net'
+  - '+.shanweiyule.com'
   - '+.shanxicloud.net'
   - '+.shanxidiy.com'
   - '+.shanximuseum.com'
@@ -52394,6 +52414,7 @@ payload:
   - '+.tohic.net'
   - '+.tohkalove.com'
   - '+.tohosting.com'
+  - '+.tohosting.net'
   - '+.tohours.com'
   - '+.tohuo.com'
   - '+.toidea.com'
@@ -56829,6 +56850,7 @@ payload:
   - '+.wnzhbb.com'
   - '+.wnzhuishu.com'
   - '+.wnzy.net'
+  - '+.wo-smart.com'
   - '+.wo-xa.com'
   - '+.wo113.net'
   - '+.wo116114.com'
@@ -58933,6 +58955,7 @@ payload:
   - '+.xingumin.net'
   - '+.xingxing.com'
   - '+.xingxingzu.com'
+  - '+.xingye.work'
   - '+.xingyi.com'
   - '+.xingyigz.com'
   - '+.xingyongli.com'
