--- a/directbak.yaml
+++ b/directbak.yaml
@@ -1607,6 +1607,7 @@ payload:
   - '+.17huang.com'
   - '+.17itou.com'
   - '+.17ivr.com'
+  - '+.17jc.net'
   - '+.17jita.com'
   - '+.17k.com'
   - '+.17kf.cc'
@@ -3998,7 +3999,6 @@ payload:
   - '+.51gjj.com'
   - '+.51gme.com'
   - '+.51golife.com'
-  - '+.51gongjijin.com'
   - '+.51gongxiao.com'
   - '+.51gouke.com'
   - '+.51goupiao.com'
@@ -4442,13 +4442,11 @@ payload:
   - '+.525.life'
   - '+.5251.net'
   - '+.5251yx.com'
-  - '+.5252e.com'
   - '+.5253.com'
   - '+.5254.com'
   - '+.5257.com'
   - '+.5258.net'
   - '+.5258da.com'
-  - '+.525jmall.com'
   - '+.5262.com'
   - '+.52676.com'
   - '+.526net.com'
@@ -5869,6 +5867,7 @@ payload:
   - '+.77mv.com'
   - '+.77nt.com'
   - '+.77piano.com'
+  - '+.77tel.com'
   - '+.77tianqi.com'
   - '+.77vcd.com'
   - '+.77xmd.com'
@@ -7972,7 +7971,6 @@ payload:
   - '+.aibing.cc'
   - '+.aibo123.com'
   - '+.aibooks.cc'
-  - '+.aibosha.com'
   - '+.aicai.com'
   - '+.aicaicdn.com'
   - '+.aicdn.com'
@@ -10481,7 +10479,6 @@ payload:
   - '+.bdgamelive.com'
   - '+.bdgslb.com'
   - '+.bdhuakan.com'
-  - '+.bdi.pub'
   - '+.bdimg.com'
   - '+.bdinfo.net'
   - '+.bditong.com'
@@ -10956,7 +10953,6 @@ payload:
   - '+.bigda.com'
   - '+.bigdata-expo.org'
   - '+.bigdata.ren'
-  - '+.bigdatabbs.com'
   - '+.bigdatabuy.com'
   - '+.bigdataedu.org'
   - '+.bigdatasafe.org'
@@ -15679,7 +15675,6 @@ payload:
   - '+.cnagcoin.com'
   - '+.cnaho.com'
   - '+.cnaicpa.org'
-  - '+.cnaidai.com'
   - '+.cnaidc.com'
   - '+.cnaifm.com'
   - '+.cnair.com'
@@ -16545,7 +16540,6 @@ payload:
   - '+.corpize.com'
   - '+.corpring.com'
   - '+.corpus4u.org'
-  - '+.cortexfx.bnpparibas.com'
   - '+.cos-show.com'
   - '+.cosco.com'
   - '+.coscon.com'
@@ -18275,7 +18269,6 @@ payload:
   - '+.deifei.com'
   - '+.deifgs.com'
   - '+.deikuo.com'
-  - '+.deiniu.com'
   - '+.dekeego.com'
   - '+.dektw.com'
   - '+.delanauto.com'
@@ -20546,7 +20539,6 @@ payload:
   - '+.eddic.net'
   - '+.eddycjy.com'
   - '+.ede35.com'
-  - '+.edenhermosa.com'
   - '+.edgesrv.com'
   - '+.edhic.com'
   - '+.edianchi.com'
@@ -20910,7 +20902,6 @@ payload:
   - '+.elpwc.com'
   - '+.els001.com'
   - '+.elsenow.com'
-  - '+.elsiehoney.com'
   - '+.elsyhw.com'
   - '+.elsz5.xyz'
   - '+.eltws.com'
@@ -21880,7 +21871,6 @@ payload:
   - '+.fanxiang.com'
   - '+.fanxiaocuo.com'
   - '+.fanxiaojian.com'
-  - '+.fanxihui.com'
   - '+.fanxing.com'
   - '+.fanxuefei.com'
   - '+.fany-eda.com'
@@ -22018,7 +22008,6 @@ payload:
   - '+.fcpiao.com'
   - '+.fcrc114.com'
   - '+.fcsc.com'
-  - '+.fcsjw.com'
   - '+.fcvvip.com'
   - '+.fcww19.com'
   - '+.fcxjiuyuan.com'
@@ -26695,7 +26684,6 @@ payload:
   - '+.heishenhua.com'
   - '+.heisiwang.com'
   - '+.heitao.com'
-  - '+.heitao.me'
   - '+.heitao2014.com'
   - '+.heixi.com'
   - '+.heiyan.com'
@@ -27224,6 +27212,7 @@ payload:
   - '+.hj-mail.com'
   - '+.hj.vc'
   - '+.hj776.com'
+  - '+.hj8.org'
   - '+.hjagent.com'
   - '+.hjapi.com'
   - '+.hjbbs.com'
@@ -27680,7 +27669,6 @@ payload:
   - '+.hongze.net'
   - '+.hongzetai.com'
   - '+.hongzhoukan.com'
-  - '+.hongztl.com'
   - '+.honkaiimpact3.com'
   - '+.honorfair.com'
   - '+.honpery.com'
@@ -27744,7 +27732,6 @@ payload:
   - '+.hotcbit.org'
   - '+.hotdb.com'
   - '+.hotdeeplink.com'
-  - '+.hotdic.com'
   - '+.hoteamsoft.com'
   - '+.hoteastday.com'
   - '+.hotelcis.com'
@@ -28979,7 +28966,6 @@ payload:
   - '+.hz-hospital.com'
   - '+.hz-winone.com'
   - '+.hz-xin.com'
-  - '+.hz100msh.com'
   - '+.hz1cm.com'
   - '+.hz5800.com'
   - '+.hz66.com'
@@ -31855,7 +31841,6 @@ payload:
   - '+.jiaoben.net'
   - '+.jiaobuser.com'
   - '+.jiaochengzhijia.com'
-  - '+.jiaodafu.net'
   - '+.jiaodian.pub'
   - '+.jiaodong.net'
   - '+.jiaofei123.com'
@@ -32058,7 +32043,6 @@ payload:
   - '+.jileniao.net'
   - '+.jiliguala.com'
   - '+.jiliguara.xyz'
-  - '+.jilingban.com'
   - '+.jilingwy.org'
   - '+.jilinpujiyiyuan.com'
   - '+.jilinwula.com'
@@ -32333,7 +32317,6 @@ payload:
   - '+.jiouyun.com'
   - '+.jipingacg.com'
   - '+.jipinwww.com'
-  - '+.jipukeji.com'
   - '+.jiqid.com'
   - '+.jiqie.com'
   - '+.jiqike.com'
@@ -33288,7 +33271,6 @@ payload:
   - '+.juming.com'
   - '+.jumore.com'
   - '+.jumorenews.com'
-  - '+.jump2006.com'
   - '+.jumpjumpcat.com'
   - '+.jumple.com'
   - '+.jumppo.com'
@@ -33794,7 +33776,6 @@ payload:
   - '+.kaiyuangroup.cc'
   - '+.kaiyuanhi.com'
   - '+.kaiyuanhotels.com'
-  - '+.kaiyuanzg.com'
   - '+.kajicam.com'
   - '+.kaka.com'
   - '+.kaka3.com'
@@ -34032,6 +34013,7 @@ payload:
   - '+.kdslife.com'
   - '+.kdt.im'
   - '+.kdued.com'
+  - '+.kdun.com'
   - '+.kdweibo.com'
   - '+.kdx.mobi'
   - '+.kdzwy.com'
@@ -34436,7 +34418,6 @@ payload:
   - '+.kkminer.com'
   - '+.kkmop.com'
   - '+.kknn.com'
-  - '+.kkqb.net'
   - '+.kkr5.com'
   - '+.kkredian.com'
   - '+.kks.me'
@@ -34511,6 +34492,7 @@ payload:
   - '+.kmtarena.net'
   - '+.kmw.com'
   - '+.kmway.com'
+  - '+.kmwzkj.com'
   - '+.kmxg.net'
   - '+.kmxkh.com'
   - '+.kmxqt.com'
@@ -34984,7 +34966,6 @@ payload:
   - '+.kumifeng.com'
   - '+.kungfucloud.com'
   - '+.kungfuenglish.com'
-  - '+.kungge.com'
   - '+.kunguankeji.com'
   - '+.kunkkawu.com'
   - '+.kunleen.com'
@@ -35190,6 +35171,7 @@ payload:
   - '+.labbase.net'
   - '+.labfan.com'
   - '+.labgogo.com'
+  - '+.labno3.com'
   - '+.laborlawtime.com'
   - '+.labtoday.net'
   - '+.labview.help'
@@ -35367,7 +35349,6 @@ payload:
   - '+.lanjinger.com'
   - '+.lanjingfm.com'
   - '+.lanjingtmt.com'
-  - '+.lanketd.com'
   - '+.lanlanlife.com'
   - '+.lanlicai.com'
   - '+.lanlv.com'
@@ -35393,7 +35374,6 @@ payload:
   - '+.lanrenzhijia.com'
   - '+.lanrenzhoumo.com'
   - '+.lansedongli.com'
-  - '+.lanseyujie.com'
   - '+.lansha.tv'
   - '+.lanshanweb.com'
   - '+.lanshenniao.com'
@@ -36695,7 +36675,6 @@ payload:
   - '+.liuxiaofan.com'
   - '+.liuxiaolingtong.com'
   - '+.liuxing.com'
-  - '+.liuxinzhou.com'
   - '+.liuxiting.com'
   - '+.liuxuchao.com'
   - '+.liuxue.com'
@@ -38015,7 +37994,6 @@ payload:
   - '+.maishou88.com'
   - '+.maishoudang.com'
   - '+.maishoumm.com'
-  - '+.maisifenqi.com'
   - '+.maisorn.com'
   - '+.maisry.net'
   - '+.maisu.vip'
@@ -38817,7 +38795,6 @@ payload:
   - '+.mergeek.com'
   - '+.merklechina.com'
   - '+.mescroll.com'
-  - '+.meshang.net'
   - '+.meshiot.com'
   - '+.mesince.com'
   - '+.mesresearch.com'
@@ -39258,7 +39235,6 @@ payload:
   - '+.minigui.org'
   - '+.minihaowan.com'
   - '+.miniluck.com'
-  - '+.miningconf.org'
   - '+.mininglamp.com'
   - '+.miniso.com'
   - '+.minisoyo.com'
@@ -39942,8 +39918,6 @@ payload:
   - '+.msfpay.com'
   - '+.msfxt.com'
   - '+.msgcarry.com'
-  - '+.msgr.dlservice.microsoft.com'
-  - '+.msgruser.dlservice.microsoft.com'
   - '+.msgtjj.com'
   - '+.mshandong.com'
   - '+.mshc2018.com'
@@ -40284,7 +40258,6 @@ payload:
   - '+.myfcomic.com'
   - '+.myfirstwon.com'
   - '+.myfrfr.com'
-  - '+.myfun.com'
   - '+.myfun7.com'
   - '+.myfund.com'
   - '+.mygame66.com'
@@ -40809,7 +40782,6 @@ payload:
   - '+.netbian.com'
   - '+.netcnnet.net'
   - '+.netcoc.com'
-  - '+.netcolor.com'
   - '+.netconst.com'
   - '+.netcoretec.com'
   - '+.netded.com'
@@ -40918,7 +40890,6 @@ payload:
   - '+.newperiod.net'
   - '+.news18a.com'
   - '+.news606.com'
-  - '+.newsafe.xyz'
   - '+.newsccn.com'
   - '+.newscctv.net'
   - '+.newsdao.com'
@@ -41935,7 +41906,6 @@ payload:
   - '+.omowork.com'
   - '+.ompchina.net'
   - '+.omsheji.com'
-  - '+.omuying.com'
   - '+.on-sun.com'
   - '+.onaliyun.com'
   - '+.oncanyin.com'
@@ -44551,6 +44521,7 @@ payload:
   - '+.qingkuaipdf.com'
   - '+.qinglanji.com'
   - '+.qingliange.com'
+  - '+.qingliangkeji.com'
   - '+.qinglin.net'
   - '+.qingliulan.com'
   - '+.qinglm.com'
@@ -45069,6 +45040,7 @@ payload:
   - '+.qrcdn.com'
   - '+.qrcpu.com'
   - '+.qrmanhua.com'
+  - '+.qroad.cc'
   - '+.qrtest.com'
   - '+.qrx.cc'
   - '+.qs12315.com'
@@ -45730,6 +45702,7 @@ payload:
   - '+.realmebbs.com'
   - '+.realmedy.com'
   - '+.realor.net'
+  - '+.realsee-cdn.com'
   - '+.realsee.com'
   - '+.realshark.com'
   - '+.realsun.com'
@@ -48277,7 +48250,6 @@ payload:
   - '+.shtwjiebao.com'
   - '+.shu-ju.net'
   - '+.shu163.com'
-  - '+.shuaacg.com'
   - '+.shuabuapp.com'
   - '+.shuadanfu.com'
   - '+.shuai.win'
@@ -48291,7 +48263,6 @@ payload:
   - '+.shuainiba.com'
   - '+.shuaishou.com'
   - '+.shuaishouzhuang.com'
-  - '+.shuaitong.vip'
   - '+.shuajb.com'
   - '+.shuaji.com'
   - '+.shuaji.net'
@@ -51454,7 +51425,6 @@ payload:
   - '+.te6.com'
   - '+.tea26.com'
   - '+.tea7.com'
-  - '+.tea88gifts.com'
   - '+.teach365.com'
   - '+.teachcn.net'
   - '+.teachercn.com'
@@ -51831,7 +51801,6 @@ payload:
   - '+.thyou.com'
   - '+.thz56.com'
   - '+.thzab.com'
-  - '+.thzer.com'
   - '+.thzxhm.com'
   - '+.ti-node.com'
   - '+.ti-solar.com'
@@ -53370,6 +53339,7 @@ payload:
   - '+.ty2y.com'
   - '+.ty3w.net'
   - '+.ty8866.com'
+  - '+.tya.company'
   - '+.tyalxx.com'
   - '+.tybai.com'
   - '+.tyc100.com'
@@ -53407,7 +53377,6 @@ payload:
   - '+.tysdmh.com'
   - '+.tysj365.com'
   - '+.tysjyjy.com'
-  - '+.tyst88.com'
   - '+.tysurl.com'
   - '+.tyswy.com'
   - '+.tyszy.com'
@@ -56138,6 +56107,7 @@ payload:
   - '+.whcdc.org'
   - '+.whcfs.org'
   - '+.whcgtx.com'
+  - '+.whchenyi.com'
   - '+.whchihuo.com'
   - '+.whckxx.com'
   - '+.whcotton.com'
@@ -56258,7 +56228,6 @@ payload:
   - '+.whlybzh.com'
   - '+.whlynk.com'
   - '+.whmama.com'
-  - '+.whmcxh.org'
   - '+.whmeigao.com'
   - '+.whmj.org'
   - '+.whmlcy.net'
@@ -56693,7 +56662,6 @@ payload:
   - '+.wlanadmin.com'
   - '+.wlanbanlv.com'
   - '+.wlanwifi.net'
-  - '+.wlbaike.com'
   - '+.wlcbnews.com'
   - '+.wlcbw.com'
   - '+.wlcxx.com'
@@ -57560,7 +57528,6 @@ payload:
   - '+.wxngh.com'
   - '+.wxp114.com'
   - '+.wxphp.com'
-  - '+.wxr999.com'
   - '+.wxrb.com'
   - '+.wxreallink.com'
   - '+.wxrrd.com'
@@ -57799,7 +57766,6 @@ payload:
   - '+.xazzg.com'
   - '+.xazzp.com'
   - '+.xazzs.com'
-  - '+.xb.dlservice.microsoft.com'
   - '+.xb100.net'
   - '+.xb2s.com'
   - '+.xb5.cc'
@@ -61581,7 +61547,6 @@ payload:
   - '+.ylmf888.com'
   - '+.ylmfeng.com'
   - '+.ylmfwin100.net'
-  - '+.ylmfwin8.com'
   - '+.ylnetworks.com'
   - '+.yloo.org'
   - '+.ylq.com'
@@ -62929,7 +62894,6 @@ payload:
   - '+.yuzhaimedia.com'
   - '+.yuzhainan.com'
   - '+.yuzhenhai.com'
-  - '+.yuzhi100.com'
   - '+.yuzhike.com'
   - '+.yuzhong.net'
   - '+.yuzhongxxw.com'
@@ -63319,7 +63283,6 @@ payload:
   - '+.zasv.net'
   - '+.zat.cc'
   - '+.zatan.com'
-  - '+.zatan8.cc'
   - '+.zatest.com'
   - '+.zatxt.com'
   - '+.zazhi.com'
@@ -63440,7 +63403,6 @@ payload:
   - '+.zdcj.net'
   - '+.zdcjw18.com'
   - '+.zddhr.com'
-  - '+.zdding.com'
   - '+.zddream.com'
   - '+.zdexe.com'
   - '+.zdface.com'
@@ -64155,7 +64117,6 @@ payload:
   - '+.zhihu.dev'
   - '+.zhihu66.com'
   - '+.zhihudsp.com'
-  - '+.zhihuiduijian.com'
   - '+.zhihuiep.com'
   - '+.zhihuihuiwu.com'
   - '+.zhihuiji.com'
